接入单页完成

--- a/source/posts/2014/1066.md
+++ b/source/posts/2014/1066.md
@@ -7,13 +7,10 @@ tags:
   - wordpress
 id: 1066
 categories:
+  - Article
   - Work
 date: 2014-06-12 20:39:11
 ---
-
-[WP Code Highlight.js]	Project
-====================
-
 
 Project Information
 ------
