--- a/source/posts/2017/1466.md
+++ b/source/posts/2017/1466.md
@@ -12,9 +12,9 @@ tags:
 id: 1466
 categories:
   - Article
-  - Blablabla
   - Work
 date: 2017-07-01 15:57:29
+draft: true
 ---
 
 之前测出来[libcopp][1]还有一些列优化点，但是要破坏之前的API，所以整理了一下优化的想法和方案。
