公式的 katex 全兼容 修正没有设置参数时使用默认参数

--- a/source/posts/2009/83.md
+++ b/source/posts/2009/83.md
@@ -13,11 +13,11 @@ $$ ax^3+bX^2+cx+d=0 $$
 
 根的关系:
 
-$$ x1 + x2 + x3 = – b / a $$
+$$ x1 + x2 + x3 = (-\frac{b}{a}) $$
 
-$$ x1 * x2 + x1 * x3 + x2 * x3 = c / a $$
+$$ x1 \times x2 + x1 \times x3 + x2 \times x3 = \frac{c}{a} $$
 
-$$ x1 * x2 * x3 = – d / a $$
+$$ x1 \times x2 \times x3 = (-\frac{d}{a}) $$
 
 牛顿迭代解方程(x0附近的根)
 
