--- a/source/posts/2010/20.md
+++ b/source/posts/2010/20.md
@@ -15,15 +15,7 @@ date: 2010-08-02 06:49:13
 （本文假设读者已经有以下知识：最短路径的基本性质、Bellman-Ford算法。）
 比如有这样一组不等式：
 
-$$ X1 - X2 <= 0 $$
-$$ X1 - X5 <= -1 $$
-$$ X2 - X5 <= 1 $$
-$$ X3 - X1 <= 5 $$
-$$ X4 - X1 <= 4 $$
-$$ X4 - X3 <= -1 $$
-$$ X5 - X3 <= -3 $$
-$$ X5 - X4 <= -3 $$
-(1)
+$$ \begin{cases} X1 - X2 <= 0 \\\\ X1 - X5 <= (-1) \\\\ X2 - X5 <= 1 \\\\ X3 - X1 <= 5 \\\\ X4 - X1 <= 4 \\\\ X4 - X3 <= (-1) \\\\ X5 - X3 <= (-3) \\\\ X5 - X4 <= (-3) \end{cases} $$(1)
 
 全都是两个未知数的差小于等于某个常数（大于等于也可以，因为左右乘以-1就可以化成小于等于）。这样的不等式组就称作差分约束系统。
 这个不等式组要么无解，要么就有无数组解。因为如果有一组解{X1, X2, …, Xn}的话，那么对于任何一个常数k，{X1 + k, X2 + k, …, Xn + k}肯定也是一组解，因为任何两个数同时加一个数之后，它们的差是不变的，那么这个差分约束系统中的所有不等式都不会被破坏。
@@ -38,12 +30,7 @@ d(v) <= d(u) + w(u, v)
 > 
 > 话说回来，所谓单源最短路径，当然要有一个源点，然后再求这个源点到其他所有点的最短路径。那么源点在哪呢？我们不妨自已造一个。以上面的不等式组为例，我们就再新加一个未知数X0。然后对原来的每个未知数都对X0随便加一个不等式（这个不等式当然也要和其它不等式形式相同，即两个未知数的差小于等于某个常数）。我们索性就全都写成Xn – X0 <= 0，于是这个差分约束系统中就多出了下列不等式：
 
-$$ X1 – X0 <= 0 $$
-$$ X2 – X0 <= 0 $$
-$$ X3 – X0 <= 0 $$
-$$ X4 – X0 <= 0 $$
-$$ X5 – X0 <= 0 $$
-(2)
+$$ \begin{cases} X1 - X0 <= 0 \\\\ X2 - X0 <= 0 \\\\ X3 - X0 <= 0 \\\\ X4 - X0 <= 0 \\\\ X5 - X0 <= 0 \end{cases} $$(2)
 
 对于这5个不等式，也在图中建出相应的边。每一条边都代表差分约束系统中的一个不等式。现在以V0为源点，求单源最短路径。最终得到的V0到Vn的最短路径长度就是Xn的一个解啦。从图1中可以看到，这组解是{-5, -3, 0, -1, -4}。当然把每个数都加上10也是一组解：{5, 7, 10, 9, 6}。但是这组解只满足不等式组(1)，也就是原先的差分约束系统；而不满足不等式组(2)，也就是我们后来加上去的那些不等式。当然这是无关紧要的，因为X0本来就是个局外人，是我们后来加上去的，满不满足与X0有关的不等式我们并不在乎。
 
@@ -68,7 +55,7 @@ X0 = 0
 
 $$ d(v) >= d(u) + w(u, v) $$
 
-也就是 $$ d(v) – d(u) >= w(u, v) $$
+也就是 $$ d(v) - d(u) >= w(u, v) $$
 
 所以建图的时候要先把所有不等式化成大于等于号的。其它各种过程，包括证明为什么解出的是最小值的证法，都完全类似。
 摘自：http://hi.baidu.com/phecy/blog/item/6583cf81d25e0edebc3e1ef3.html
