--- a/source/posts/2010/41.md
+++ b/source/posts/2010/41.md
@@ -43,7 +43,7 @@ $$ sci = fi \times ci $$(1)
  
 $$ time = \frac{fi}{pi} + \frac{fi}{bi} $$(2)
  
-$$ f1 + f2 + … fk = f $$(3)
+$$ \sum_{i=1}^{k} fi = f $$(3)
  
 $$ fi = \frac{time \times pi \times bi}{pi + bi} $$ {4}
  
@@ -61,13 +61,15 @@ $$ time \times (\sum_{i=1}^{k} \frac{pi \times bi}{pi + bi}) = f $$(5)
  
 关于0-1分数规划：
 
-令 $$ xi = \frac{pi \times bi}{pi + bi} $$ 现在我们知道
+令 $$ xi = \frac{pi \times bi}{pi + bi} $$
 
-$$ res = f \times (\sum_{i=1}^{k} xici) / \sum_{i=1}^{k} xi $$
+现在我们知道
 
-令 $$ z = \min (f \times (\sum_{i=1}^{k} xici) – res \times (\sum_{i=1}^{k} xi) ) $$
+$$ res = f \times \frac{\sum_{i=1}^{k} xici}{\sum\_{i=1}^{k} xi} $$ 
 
-即 $$ z(l) = \min ( f \times (\sum_{i=1}^{k} xici) – l \times (\sum_{i=1}^{k} xi) ) $$
+令 $$ z = \min (f \times (\sum\_{i=1}^{k} xici) - res \times (\sum\_{i=1}^{k} xi) ) $$
+
+即 $$ z(l) = \min ( f \times (\sum\_{i=1}^{k} xici) - l \times (\sum\_{i=1}^{k} xi) ) $$
 
 由于z(l)单调递减,设问题最优解为l*
 
