--- a/source/posts/2014/1046.md
+++ b/source/posts/2014/1046.md
@@ -105,27 +105,27 @@ int main() {
 
 以时针为原点，分针每秒转 $$\frac{11}{120}^{\circ}$$,$$\text{分针当前度数}=\text{分钟起始度数}+\frac{\text{秒针度数}\times 11}{719}$$
 
-以时针为原点，秒针共转 $$\text{12 \ensuremath{\times}60 - 1}$$
+以时针为原点，秒针共转 $$ 12 \times 60 - 1 $$
 
 令 cur\_m\_d 为每圈分钟起始度数，d为输入的最小角度，s为秒针度数。
 
 1. 秒针在分针前, 分针在时针前
-$$ cur\_m\_d+\frac{s\times11}{719}-s\geqslant d\rightarrow s\leqslant\frac{\left(cur\_m\_d-d\right)*719}{708} $$
+$$ cur\\_m\\_d+\frac{s \times 11}{719} - s\geqslant d\rightarrow s\leqslant\frac{\left(cur\\_m\\_d-d\right)*719}{708} $$
 
 $$ d\leqslant s $$
 
-$$ 360-\left(cur\_m\_d+\frac{s\times11}{719}\right)\geqslant d\rightarrow s\leqslant\frac{\left(360-cur\_m\_d-d\right)\times719}{11} $$
+$$ 360-\left(cur\\_m\\_d+\frac{s\times11}{719}\right)\geqslant d\rightarrow s\leqslant\frac{\left(360-cur\\_m\\_d-d\right)\times719}{11} $$
 
 2. 秒针在分针前, 分针在时针后
 $$ d\leqslant s $$
 
 $$ 360-s\geqq d\rightarrow s\leqslant360-d $$
 
-$$ \left(cur\_m\_d+\frac{s\times11}{719}\right)-360\geqslant d\rightarrow s\geqslant\frac{\left(360+d-cur\_m\_d\right)\times719}{11} $$
+$$ \left(cur\\_m\\_d+\frac{s\times11}{719}\right)-360\geqslant d\rightarrow s\geqslant\frac{\left(360+d-cur\\_m\\_d\right)\times719}{11} $$
 
 3. 秒针在分针后
-$$ s-\left(cur\_m\_d+\frac{s\times11}{719}\right)\geqslant d\rightarrow s\geqslant\frac{\left(d+cur\_m\_d\right)\times719}{708} $$
+$$ s-\left(cur\\_m\\_d+\frac{s\times11}{719}\right)\geqslant d\rightarrow s\geqslant\frac{\left(d+cur\\_m\\_d\right)\times719}{708} $$
 
-$$ cur\_m\_d+\frac{s\times11}{719}\geqslant d\rightarrow s\geqslant\frac{\left(d-cur\_m\_d\right)\times719}{11} $$
+$$ cur\\_m\\_d+\frac{s\times11}{719}\geqslant d\rightarrow s\geqslant\frac{\left(d-cur\\_m\\_d\right)\times719}{11} $$
 
 $$ 360-s\geqslant d\rightarrow s\leqslant360-d $$
