--- a/source/posts/2010/15.md
+++ b/source/posts/2010/15.md
@@ -11,11 +11,9 @@ date: 2010-09-08 16:47:57
 
 Catalan数:
 
-$$ h(1)＝1,h(0)=1 $$
+$$ h(1)=1,h(0)=1 $$
 
-$$ h(n)= h(0)*h(n-1)+h(1)*h(n-2) + … + h(n-1)h(0) (其中n>=2) $$
-
-$$ h(n)=C(2n,n)/(n+1) (n=1,2,3,…) $$
+$$ h(n)=\begin{cases} \sum_{i=0}^{n-1} h(i) \times h(n-i-1) & \text{if }(n>=2) \\\\ \frac{C(2n,n)}{n+1} & \text{if }(n=1,2,3,\mathellipsis) \end{cases} $$
 
 相关结论：
 n边形能分解成三角形的分法数为  h(n – 2)
