唉，先改一半

--- a/source/post/2012/652.md
+++ b/source/post/2012/652.md
@@ -437,3 +437,4 @@ int main()
 如注释所言，4.7.0 以前的GCC 就不用争扎了，编译不过的
 
 以下内容包含了完整对AC自动机的解释构建过程
+<iframe src="https://onedrive.live.com/embed?cid=9E9045AB22B1A22D&resid=9E9045AB22B1A22D%213581&authkey=AJ18KaVUXeeBG4o&em=2" width="804" height="654" frameborder="0" scrolling="no"></iframe>
