--- a/source/post/2016/1214.md
+++ b/source/post/2016/1214.md
@@ -25,9 +25,9 @@ date: 2016-02-19 12:44:53
 
 经过茫茫长时间的编写+过年在家无聊补充和修正单元测试，再加上这两天的整理，终于把以前的这个关于服务器通信中间件的基本功能和相应的单元测试完成啦。还是可以热烈庆祝一下的。
 
-[《关于BUS通信系统的一些思考（一）》](https://www.owent.net/r4DoG)
-[《关于BUS通信系统的一些思考（二）》](https://www.owent.net/gCsOx)
-[《关于BUS通信系统的一些思考（三）》](https://www.owent.net/V1j6B)
+[《关于BUS通信系统的一些思考（一）》](https://www.owent.net/2014/1090.html)
+[《关于BUS通信系统的一些思考（二）》](https://www.owent.net/2014/1099.html)
+[《关于BUS通信系统的一些思考（三）》](https://www.owent.net/2015/1201.html)
 
 主要的思路还是在自动选择**共享内存**或是**tcp**或是**unix socket**进行通信。使用节点ID，屏蔽底层通信细节，屏蔽自动重连细节和节点之间自动建立直连的细节。同时基于目前的游戏服务器架构设计方式预留了一些拓展性的设计，以便于后续服务器框架的实现。主要是指全异步，树形结构，自动化的容灾设计和动态扩容缩容，不停服更新，统计等等。
 
