--- a/source/post/2016/1286.md
+++ b/source/post/2016/1286.md
@@ -98,7 +98,7 @@ Linux+共享内存                           | 3(仅一个连接压力测试) | 
 由于测试tbus的时候有跨机器的，所以某些进程CPU跑不满也是正常情况。算上CPU的消耗比例，atbus的读性能和tbus对比的话，主要是
 
 + 使用**共享内存通道**的时候，读性能是差不多的，写性能atbus要高过tbus大约不到一倍。
-+ atbus能够**收敛共享内存通道数量**，能大幅减少不必要的内存消耗。这个设计详见：[关于BUS通信系统的一些思考（二）](https://owent.net/gCsOx) 或 https://github.com/atframework/libatbus/tree/master/doc
++ atbus能够**收敛共享内存通道数量**，能大幅减少不必要的内存消耗。这个设计详见：[关于BUS通信系统的一些思考（二）](https://owent.net/2014/1099.html) 或 https://github.com/atframework/libatbus/tree/master/doc
 + 对于**网络通道的大数据包**，读性能仍然是差不多。但是atbus的写性能大约是tbus的4-5倍，QPS大约是6-7倍。
 + 但是对于**网络通道的小数据包**，读写都落后tbus很多
 
