--- a/source/post/2014/988.md
+++ b/source/post/2014/988.md
@@ -12,37 +12,37 @@ tags:
 
 # Native Code 型语言
 ## C/C++
-+ [《ptmalloc,tcmalloc和jemalloc内存分配策略研究》](http://www.owent.net/?p=867) -- Linux平台内存分配和回收的一点研读和心得。了解底层原理还是很有裨益的
-+ [《一个C++关于成员变量偏移地址的小Trick》](http://www.owent.net/?p=879) -- 有时候编译器总有一些奇怪的行为
-+ [《VC和GCC内成员函数指针实现的研究(一)》](http://www.owent.net/?p=890)、[《VC和GCC内成员函数指针实现的研究(二)》](http://www.owent.net/?p=896)、[《VC和GCC内成员函数指针实现的研究(三)》](http://www.owent.net/?p=902) -- 编译器的一些编译原理和细节，可能会和想当然的结果不一样
-+ [《std和boost的function与bind实现剖析》](http://www.owent.net/?p=938) -- 现代C++提倡模板编程，这些库把C++模板的威力发挥到了极致
-+ [《C++11动态模板参数和type_traits》](http://www.owent.net/?p=971) -- 这是C++11的新特性，使用起来比较难以理解，但是用得好的话，真的可以省去很多不必要的劳动
-+ [《C++又一坑:动态链接库中的全局变量》](http://www.owent.net/?p=962) -- 我记得好像是《Effective C++》上说，如果说C有50个坑，那C++绝对有90个，这就是其中一个
++ [《ptmalloc,tcmalloc和jemalloc内存分配策略研究》](https://owent.net/2013/867.html) -- Linux平台内存分配和回收的一点研读和心得。了解底层原理还是很有裨益的
++ [《一个C++关于成员变量偏移地址的小Trick》](https://owent.net/2013/879.html) -- 有时候编译器总有一些奇怪的行为
++ [《VC和GCC内成员函数指针实现的研究(一)》](https://owent.net/2013/890.html)、[《VC和GCC内成员函数指针实现的研究(二)》](https://owent.net/2013/896.html)、[《VC和GCC内成员函数指针实现的研究(三)》](https://owent.net/2013/902.html) -- 编译器的一些编译原理和细节，可能会和想当然的结果不一样
++ [《std和boost的function与bind实现剖析》](https://owent.net/2013/938.html) -- 现代C++提倡模板编程，这些库把C++模板的威力发挥到了极致
++ [《C++11动态模板参数和type_traits》](https://owent.net/2014/971.html) -- 这是C++11的新特性，使用起来比较难以理解，但是用得好的话，真的可以省去很多不必要的劳动
++ [《C++又一坑:动态链接库中的全局变量》](https://owent.net/2014/962.html) -- 我记得好像是《Effective C++》上说，如果说C有50个坑，那C++绝对有90个，这就是其中一个
 
 # 脚本语言
 ## lua
-+ [《Lua 挺好用的样子》](http://www.owent.net/?p=918) -- 很多程序开始嵌入lua了，这个性能强劲的脚本小语言还是挺有意思的
++ [《Lua 挺好用的样子》](https://owent.net/2013/918.html) -- 很多程序开始嵌入lua了，这个性能强劲的脚本小语言还是挺有意思的
 
 ## javascript
-+ [《从Javascript到Typescript到Node.js》](http://www.owent.net/?p=851) -- 闲来无事学习的新东西，javascript一直被诟病说拓展性太强了，导致容易失去了约束而整体混乱。这些个东西一个是javascript扩展工具，一个是javascript的经典应用
++ [《从Javascript到Typescript到Node.js》](https://owent.net/2013/851.html) -- 闲来无事学习的新东西，javascript一直被诟病说拓展性太强了，导致容易失去了约束而整体混乱。这些个东西一个是javascript扩展工具，一个是javascript的经典应用
 
 ## bash & shell
 熟悉了一些sed和awk的使用，看到书上说perl是专门设计来替代awk的，什么时候研究下
 
 ## web
-+ [《更新新的Blog主题》](http://www.owent.net/?p=956)-- 使用**php**和**html5**，**css3**的blog主题：css生成方面学习了一下**less**和**bootstrap**；**javascript**方面仍然依赖**jQuery**，且使用**modernizr**检测浏览器实现了css3和javascript动画智能切换；顺便还应用上了之前写得瀑布流组件（见：[http://api.owent.net/](http://api.owent.net/) **SimpleFliud -- Web瀑布流组建，jQuery 插件**）
++ [《更新新的Blog主题》](https://owent.net/2013/956.html)-- 使用**php**和**html5**，**css3**的blog主题：css生成方面学习了一下**less**和**bootstrap**；**javascript**方面仍然依赖**jQuery**，且使用**modernizr**检测浏览器实现了css3和javascript动画智能切换；顺便还应用上了之前写得瀑布流组件（见：[http://api.owent.net/](http://api.owent.net/) **SimpleFliud -- Web瀑布流组建，jQuery 插件**）
 
 # 工具及其他
 ## 虚拟机
-+ [《[记录]虚拟硬盘的压缩|磁盘写零》](http://www.owent.net/?p=722) -- 有时候做尝试的时候虚拟机还是比较好用的，但是虚拟机用久了即便把文件删了虚拟硬盘仍然很大，不方便迁移也不必要得占用了磁盘。这时候紧缩磁盘就很有用了
++ [《[记录]虚拟硬盘的压缩|磁盘写零》](https://owent.net/2013/722.html) -- 有时候做尝试的时候虚拟机还是比较好用的，但是虚拟机用久了即便把文件删了虚拟硬盘仍然很大，不方便迁移也不必要得占用了磁盘。这时候紧缩磁盘就很有用了
 
 # 问题及记录
 
-+ [《Linux 编译安装 GCC 4.8》](http://www.owent.net/?p=730) -- GCC一键编译脚本
-+ [《Lnmp yum 安装脚本 (for CentOS)》](http://www.owent.net/?p=740) -- VPS里快速部署用得
-+ [《ARM 交叉编译环境搭建》](http://www.owent.net/?p=738) -- 可以拿来稍微测试下ARM交叉编译
-+ [《试试Boost.Asio》](http://www.owent.net/?p=811) -- Boost.Asio使用起来还比较简单，但是如何提高性能呢？
-+ [《网络编程小结》](http://www.owent.net/?p=818) -- 早期的小总结
++ [《Linux 编译安装 GCC 4.8》](https://owent.net/2013/730.html) -- GCC一键编译脚本
++ [《Lnmp yum 安装脚本 (for CentOS)》](https://owent.net/2013/740.html) -- VPS里快速部署用得
++ [《ARM 交叉编译环境搭建》](https://owent.net/2013/738.html) -- 可以拿来稍微测试下ARM交叉编译
++ [《试试Boost.Asio》](https://owent.net/2013/811.html) -- Boost.Asio使用起来还比较简单，但是如何提高性能呢？
++ [《网络编程小结》](https://owent.net/2013/818.html) -- 早期的小总结
 
 # 2014年的规划
 
