--- a/source/post/2016/1285.md
+++ b/source/post/2016/1285.md
@@ -16,7 +16,7 @@ date: 2016-07-09 14:15:14
 这个问题起源于以前给客户端写的一个log模块，然后里面为了线程安全且多线程下不互相写乱，并且因为这些系统基本都用比较高版本的编译器，都支持C++11了，所以就用了C++11的TLS功能。
 
 但是Android的默认std库并不是libstdc++或者libc++，而是[Bionic](http://en.wikipedia.org/wiki/Bionic_%28software%29#cite_note-Gentry-6)。IOS不知道是什么版本的标准库都不支持thread_local的关键字。
-这个之前写过一个记录提到过 [Android NDK undefined reference to ___tls_get_addr 错误](https://www.owent.net/41UTL)。如果使用这个关键字，链接的时候会报错说找不到符号。
+这个之前写过一个记录提到过 [Android NDK undefined reference to ___tls_get_addr 错误](https://www.owent.net/2015/1140.html)。如果使用这个关键字，链接的时候会报错说找不到符号。
 
 当时梅花太多时间，而是在这两个环境下直接用了加锁的方式。但是我们开发在Windows上，实际发布产品的时候是在Android和IOS上，这么做也就意味着开发时性能高过发布的代码。这显然不够美好，所以这两天做底层优化就顺带解决了一下。
 
