last url redirect

--- a/source/post/2014/1076.md
+++ b/source/post/2014/1076.md
@@ -10,6 +10,10 @@ date: 2014-07-01 14:24:25
 ---
 
 # Markdown
+## Markdown-plus
+
+[http://mdp.tylingsoft.com/](http://mdp.tylingsoft.com/)
+
 ## stackedit
 
 [http://stackedit.io](http://stackedit.io)&nbsp; GitHub([http://github.com/benweet/stackedit](http://github.com/benweet/stackedit))
