--- a/source/post/2015/1142.md
+++ b/source/post/2015/1142.md
@@ -15,30 +15,30 @@ date: 2015-02-25 15:12:41
 
 # Native Code 型语言
 ## C/C++
-+ [《C++11动态模板参数和type_traits》](https://www.owent.net/2014/01/c11%e5%8a%a8%e6%80%81%e6%a8%a1%e6%9d%bf%e5%8f%82%e6%95%b0%e5%92%8ctype_traits.html) – 目前最上流C++设计模式就是模板，各种逆天的用法。这个只是冰山一角，也算是个敲门砖
-+ [《简单C++单元测试框架(支持一键切到GTest或Boost.Test)》](https://www.owent.net/2014/04/%e7%ae%80%e5%8d%95cxx%e5%8d%95%e5%85%83%e6%b5%8b%e8%af%95%e6%a1%86%e6%9e%b6.html) – 无论是Boost.Test还是GTest都过于复杂。而且跨平台方面比较有问题，于是就搞了个自己的单元测试框架。然而为了让一些平台下能利用到GTest和Boost.Test里的一些有用的特性，就在设计之初就做了一些适配层，这样可以很容易地切换到GTest或者Boost.Test。
-+ [《捣鼓一个协程库》](https://www.owent.net/2014/03/%e6%8d%a3%e9%bc%93%e4%b8%80%e4%b8%aa%e5%8d%8f%e7%a8%8b%e5%ba%93.html) – 协程还是蛮上流的，参照微信libco库和微软Task系统的API而写出来的一个协程任务系统。基本功能已经完成。
-+ [《再议 C++ 11 Lambda表达式》](https://www.owent.net/2014/06/%e5%86%8d%e8%ae%ae-c-11-lambda%e8%a1%a8%e8%be%be%e5%bc%8f.html) – 稍微深入C++11的lambda表达式和遇到的问题。
-+ [《[libiniloader] Project》](https://www.owent.net/2014/07/libiniloader-project.html) – 同样是由于现有的ini读取库都过于复杂，而且我这里ini读取主要用于游戏配置，希望接口简单，并且支持像PHP里那种层次关系。所以就有了这个玩意。自己用状态机简单实现的词法分析，并使用模板实现导出数据，还做了对象conf文件用#来注释的支持。最重要的是，所有的实现只有两个文件（一个.cpp和一个.h）。
-+ [《关于BUS通信系统的一些思考（一）》](https://www.owent.net/2014/08/%e5%85%b3%e4%ba%8ebus%e9%80%9a%e4%bf%a1%e7%b3%bb%e7%bb%9f%e7%9a%84%e4%b8%80%e4%ba%9b%e6%80%9d%e8%80%83%ef%bc%88%e4%b8%80%ef%bc%89.html)、[《关于BUS通信系统的一些思考（二）》](https://www.owent.net/2014/08/%e5%85%b3%e4%ba%8ebus%e9%80%9a%e4%bf%a1%e7%b3%bb%e7%bb%9f%e7%9a%84%e4%b8%80%e4%ba%9b%e6%80%9d%e8%80%83%ef%bc%88%e4%ba%8c%ef%bc%89.html) – 主要是堆现有我接触到的一些通信系统的一个小总结，然后试着设计一个能解决一些问题的设想。具体实现仍在缓慢实现过程中。目前比较让自己满意的部分是性能测试和稳定性测试。
-+ [《集成Qt Webkit 到cocos2d-x》](https://www.owent.net/2014/12/%e9%9b%86%e6%88%90qt-webkit-%e5%88%b0cocos2d-x.html) – 由于项目工具需要，了解了一下Qt。Qt的设计还是比较有意思的。
-+ [《Android NDK undefined reference to ___tls_get_addr 错误》](https://www.owent.net/2015/02/android-ndk-undefined-reference-to-___tls_get_addr-%e9%94%99%e8%af%af.html) – 写跨平台代码过程中碰到的android的一个奇怪的链接问题而引发的一些小研究。不用不知道，一用吓一跳。
++ [《C++11动态模板参数和type_traits》](https://www.owent.net/2014/971.html) – 目前最上流C++设计模式就是模板，各种逆天的用法。这个只是冰山一角，也算是个敲门砖
++ [《简单C++单元测试框架(支持一键切到GTest或Boost.Test)》](https://www.owent.net/2014/1031.html) – 无论是Boost.Test还是GTest都过于复杂。而且跨平台方面比较有问题，于是就搞了个自己的单元测试框架。然而为了让一些平台下能利用到GTest和Boost.Test里的一些有用的特性，就在设计之初就做了一些适配层，这样可以很容易地切换到GTest或者Boost.Test。
++ [《捣鼓一个协程库》](https://www.owent.net/2014/1000.html) – 协程还是蛮上流的，参照微信libco库和微软Task系统的API而写出来的一个协程任务系统。基本功能已经完成。
++ [《再议 C++ 11 Lambda表达式》](https://www.owent.net/2014/1060.html) – 稍微深入C++11的lambda表达式和遇到的问题。
++ [《[libiniloader] Project》](https://www.owent.net/2014/1081.html) – 同样是由于现有的ini读取库都过于复杂，而且我这里ini读取主要用于游戏配置，希望接口简单，并且支持像PHP里那种层次关系。所以就有了这个玩意。自己用状态机简单实现的词法分析，并使用模板实现导出数据，还做了对象conf文件用#来注释的支持。最重要的是，所有的实现只有两个文件（一个.cpp和一个.h）。
++ [《关于BUS通信系统的一些思考（一）》](https://www.owent.net/2014/1090.html)、[《关于BUS通信系统的一些思考（二）》](https://www.owent.net/2014/1099.html) – 主要是堆现有我接触到的一些通信系统的一个小总结，然后试着设计一个能解决一些问题的设想。具体实现仍在缓慢实现过程中。目前比较让自己满意的部分是性能测试和稳定性测试。
++ [《集成Qt Webkit 到cocos2d-x》](https://www.owent.net/2014/1120.html) – 由于项目工具需要，了解了一下Qt。Qt的设计还是比较有意思的。
++ [《Android NDK undefined reference to ___tls_get_addr 错误》](https://www.owent.net/2015/1140.html) – 写跨平台代码过程中碰到的android的一个奇怪的链接问题而引发的一些小研究。不用不知道，一用吓一跳。
 
 # 脚本 & 托管语言
 ## Lua
-+ [《Lua性能分析》](https://www.owent.net/2014/12/lua%e6%80%a7%e8%83%bd%e5%88%86%e6%9e%90.html) – 做这个得原因是lua profile不支持lua5.2。其他好用的工具都不免费。干脆就自己搞个性能分析工具，比较开心的是被[gaccob](http://gaccob.com/)拿去改装啦
-+ [《tolua++内存释放坑》](https://www.owent.net/2015/01/tolua%e5%86%85%e5%ad%98%e9%87%8a%e6%94%be%e5%9d%91.html) – tolua++的坑真不少，已经发现的已经两个了，没发现的还不知道，所以为了保险起见，自己写了个lua函数绑定机制。等新的机制趋于成熟了再发分享出来
++ [《Lua性能分析》](https://www.owent.net/2014/1128.html) – 做这个得原因是lua profile不支持lua5.2。其他好用的工具都不免费。干脆就自己搞个性能分析工具，比较开心的是被[gaccob](http://gaccob.com/)拿去改装啦
++ [《tolua++内存释放坑》](https://www.owent.net/2015/1133.html) – tolua++的坑真不少，已经发现的已经两个了，没发现的还不知道，所以为了保险起见，自己写了个lua函数绑定机制。等新的机制趋于成熟了再发分享出来
 
 ## Javascript
-+ [《基于Chrome插件的开发工具链》](https://www.owent.net/2014/05/%e5%9f%ba%e4%ba%8echrome%e6%8f%92%e4%bb%b6%e7%9a%84%e5%bc%80%e5%8f%91%e5%b7%a5%e5%85%b7%e9%93%be.html) – 之前在腾讯的时候，跨部门沟通效率太低，所以干脆自己写浏览器插件来做一些自动化和多个工具集成方面的工作。于是研究了一下浏览器插件的编写，实际上后来还研究了Firefox的，总结发到腾讯KM里但是忘记转发一份到blog了。现在离职了拿不到，过两天找人问问看能不能拿回来。
++ [《基于Chrome插件的开发工具链》](https://www.owent.net/2014/1054.html) – 之前在腾讯的时候，跨部门沟通效率太低，所以干脆自己写浏览器插件来做一些自动化和多个工具集成方面的工作。于是研究了一下浏览器插件的编写，实际上后来还研究了Firefox的，总结发到腾讯KM里但是忘记转发一份到blog了。现在离职了拿不到，过两天找人问问看能不能拿回来。
 
 ## PHP
-+ [《[WP Code Highlight.js] Project》](https://www.owent.net/2014/06/wp-code-highlight-js-project.html) – 迁移blog写作工具的产物，集成highlight.js用得，并且已发布到wordpress的plugin里
++ [《[WP Code Highlight.js] Project》](https://www.owent.net/2014/1066.html) – 迁移blog写作工具的产物，集成highlight.js用得，并且已发布到wordpress的plugin里
 
 # 工具及其他
-+ [《又碰到了这个解谜游戏，顺带记下地址》](https://www.owent.net/2014/04/%e5%8f%88%e7%a2%b0%e5%88%b0%e4%ba%86%e8%bf%99%e4%b8%aa%e8%a7%a3%e8%b0%9c%e6%b8%b8%e6%88%8f%ef%bc%8c%e9%a1%ba%e5%b8%a6%e8%ae%b0%e4%b8%8b%e5%9c%b0%e5%9d%80.html) – 以前遇到的解谜游戏的地址
-+ [《Linux 编译安装 GCC 4.9》](https://www.owent.net/2014/04/linux-%e7%bc%96%e8%af%91%e5%ae%89%e8%a3%85-gcc-4-9.html) – gcc 4.9已发布，在4.8的基础上新增优化了很多功能
-+ [《记录一些在线编辑器》](https://www.owent.net/2014/07/%e8%ae%b0%e5%bd%95%e4%b8%80%e4%ba%9b%e5%9c%a8%e7%ba%bf%e7%bc%96%e8%be%91%e5%99%a8.html) – 这是转向使用markdown写作的开始
++ [《又碰到了这个解谜游戏，顺带记下地址》](https://www.owent.net/2014/1036.html) – 以前遇到的解谜游戏的地址
++ [《Linux 编译安装 GCC 4.9》](https://www.owent.net/2014/1038.html) – gcc 4.9已发布，在4.8的基础上新增优化了很多功能
++ [《记录一些在线编辑器》](https://www.owent.net/2014/1076.html) – 这是转向使用markdown写作的开始
 + [《LLVM + Clang + Libcxx + Libcxxabi 工具链编译》](https://www.owent.net/2014/1101.html) – 这是主流编译器构建的一个补充，clang的编译系统做的远不如gnu的。编译起来困难重重。
 + [《近期研究VPN的一些记录(OpenVPN,pptp,l2tp)》](https://www.owent.net/2014/1105.html) – 研究的VPN搭建流程，主要是作为软件开发。不翻墙没法活啊。工具、很多优秀的开源项目都搞不到
 + [《Gitlab环境搭建小计》](https://www.owent.net/2014/1110.html)、[《gitlab腾讯企业邮箱配置》](https://www.owent.net/2015/1138.html) – 开始主要版本控制系统转向git的开始
