--- a/source/post/2017/1467.md
+++ b/source/post/2017/1467.md
@@ -4,7 +4,7 @@ categories:
   - Article
   - Blablabla
 date: 2017-07-17 12:33:44
-draft: true
+draft: false
 id: 1467
 tags: []
 title: Blog切换到Hugo
@@ -19,13 +19,15 @@ type: post
 ## 框架设计
 其实本来有两个备选方案。一个是国人写得[Hexo][1]，另一个是[Hugo][2]。[Jekyll][3]不在考虑之列，因为我对ruby不熟并且没有兴趣。以前玩过[Jekyll][3]，感觉还是太折腾了。特别是国内还得换源什么的。
 
-不过单单就[Hexo][1]和[Hugo][2]的框架设计来说，我觉得是[Hexo][1]远远胜于[Hugo][2]的。因为[Hexo][1]有更完整的插件机制，主题机制。它的插件机制可以让你替换里面的核心组件，增加更多的渲染引擎、模板引擎等等。并且和nodejs的很多工具配合起来用，非常方便。这样主题作者和插件作者都能按自己的习惯和熟悉的东西来。比如你可以用sass或者less来写css，然后也可以不用默认的模板引擎ejs，很多人的主题用jade的。甚至可以换掉Markdown引擎，增加更多的Markdown功能进去。也可以在很多事件点插入和修改生成的HTML，来插入一些功能。
+不过单单就[Hexo][1]和[Hugo][2]的框架设计来说，我觉得是[Hexo][1]远胜于[Hugo][2]的。因为[Hexo][1]有更完整的插件机制，主题机制。它的插件机制可以让你替换里面的核心组件，增加更多的渲染引擎、模板引擎等等。并且可以和nodejs的很多工具配合起来用，非常方便。这样主题作者和插件作者都能用自己的习惯和熟悉的工具链来开发。比如你可以用sass或者less来写css，然后也可以不用默认的模板引擎ejs，很多人的主题用jade的。甚至可以换掉Markdown引擎，增加更多的Markdown功能进去。也可以在很多事件点插入和修改生成的HTML，来插入一些功能。
 
 相比之下[Hugo][2]就差多了。压根没有插件机制，干啥都得主题自己做。读配置也写得比较死，很不方便。比如[Hexo][1]可以给主题加配置，然后有主题配置和站点配置，但是[Hugo][2]就没法读取主题配置。另外[Hugo][2]的模板引擎只能用Go语言的[HTML template][8]。哇这货难用的屎一样。语法就像是要你自己写逆波兰式。自己写树形结构。不过就像[Hugo][2]自己说的，它这个静态网站生成系统非常地快。确实很快，比[Hexo][1]快多了。而且它的Star数量也赶超了[Hexo][1]。
 
 不过我觉得[Hugo][2]比[Hexo][1]活跃的原因并不是因为它快。我觉得对于静态网站生成来说，这点性能并不是特别重要。而且[Hexo][1]的生成速度也可以接受，至少它比[gitbook][9]快多了。真正制约[Hexo][1]发展的应该是文档。作为一个开源项目而言，文档及其重要。而[Hexo][1]很多重要部分API的文件，根本找不到。比如它说一些事件里的回调参数是Data类型，然后我并没有在哪里找到Data类型是个啥，里面有什么。写插件和主题的时候全靠看别人的怎么写，然后试。这太伤了。相比之下,[Hugo][2]的文档就完善得多得多得多。虽然也有些地方的找别人主题的参考实现，但是基本上从复杂到小白的文档都覆盖得比较完整。
 
-现在我也说不上来这两个那个更有前景，[Hexo][1]还差很多文档和事件响应目前给了裸HTML，操作起来其实很不方便。而[Hugo][2]目前确实插件机制，而且很多配置和参数写得很死。我迁移到静态博客系统主要是复刻主题。所以两个系统的主题都复刻了一遍，主框架是一样的，但是用了兼容两者的写法和配置吧。
+现在我也说不上来这两个那个更有前景，[Hexo][1]还差很多文档和事件响应目前给了裸HTML，虽然能用而且很自由，但是操作起来其实很不方便，缺乏最佳实践。而[Hugo][2]目前缺失插件机制，而且很多配置和参数写得很死。
+
+我迁移到静态博客系统主要是复刻主题。所以两个系统的主题都复刻了一遍，主框架是一样的，但是用了兼容两者的写法和配置吧。
 
 ## 移植主题
 我的Wordpress的博客用得是自己写得主题[distinctionpp](https://github.com/owt5008137/distinctionpp)。所以复刻了两个系统的主题：
@@ -35,15 +37,15 @@ type: post
 
 两个主题的功能和内容基本是保持一致的，除了有些无法实现的功能。比如[Hugo][2]很难支持把&lt;!-- toc --&gt;转为目录，只能固定地给所有文章开头加目录。
 
-然后在原有的主题上有做了更进一步地精简，裁剪加载文件大小和把一些突变换成纯CSS3实现，再就是微调一些样式。
+然后在原有的主题上有做了更进一步地精简，裁剪加载文件大小和把一些图片换成纯CSS3实现，再就是微调一些样式。
 
 接下来还有一些额外的功能得添加和替换，毕竟静态博客和动态网站还是有一些限制的。
 
 ## 添加 MathJax/KaTex 支持
 
-[MathJax][6]和[KaTex][7]主要用来用latex写公式。
+[MathJax][6]和[KaTex][7]主要用来用Latex写公式。
 
-这个在[Hexo][1]里很方便，有人写了插件，安装就行了。但是[Hugo][2]就得我自己集成了，还好反正不困难。然后我的Blog就支持公式了。并且我把以前一些文章的内容改成了公式。好看多了。
+这个在[Hexo][1]里很方便，有人写了插件，安装就行了。但是[Hugo][2]就得自己集成了，还好反正不困难。然后我的Blog就支持公式了。并且我把以前一些文章的内容改成了公式。好看多了。
 
 ## 代码高亮
 原先我是写了Wordpress插件[WP-Code-Highlight.js](https://github.com/owt5008137/WP-Code-Highlight.js)。这里我就直接集成到主题里去了。而且也没其他什么很好的方法。两个系统自带的高亮都很渣，插件兼容性很糟糕。
@@ -86,15 +88,15 @@ type: post
 ## 评论
 评论系统也是蛮麻烦的，之前国内的多说已经关闭了。我看了下别人说的其他家也不是很好用。
 
-不过我之前看到过有人做了用Github的Issue来做评论系统的，之前star了[gitcomment][4]，就试了一下。我的主题里是集成了这个，但是这个和另一个俄罗斯小朋友写得系统一样，要求评论者必须授权Application对Public仓库的完整读写权限（包括但不限于代码、Wiki和issues）。不过[gitcomment][4]作者也说了，github没有提供更系粒度的权限了，所以这已经是要的最小的权限了,但是读权限就算了，还必须给写权限，我还是觉得有点不靠谱。
+不过我之前看到过有人做了用Github的Issue来做评论系统的，之前star了[gitcomment][4]，就试了一下。我的主题里是集成了这个，但是这个和另一个俄罗斯小朋友写得系统一样，要求评论者必须授权Application对Public仓库的完整读写权限（包括但不限于代码、Wiki和issues）。不过[gitcomment][4]作者也说了，github没有提供更系粒度的权限了，所以这已经是要的最小的权限了,但是读权限就算了，还必须给写权限，我还是觉得有点不靠谱，所以我自己妹妹有用，测试完就关掉配置了，其他人谁想用倒是可以打开。
 
-所以最终还是回归[disqus][5]。无奈这货在国内被墙。唉，反正上我blog还会回复的应该都是程序员了吧？程序员翻墙不是难事吧？所以不管了先还是[disqus][5]吧。
+最终还是回归[disqus][5]。无奈这货在国内被墙。唉，反正上我blog还会回复的应该都是程序员了吧？程序员翻墙不是难事吧？所以不管了先还是[disqus][5]吧。
 
 ## 后遗症
 这个换完系统其实还是蛮伤的，一个是之前的评论我先吧重要的补到原来的文章里了，不重要的就丢了。
 然后哪些迁移工具导出的Markdown多多少少有问题，所以我挨个过了一遍。
 再就是原来的地址都失效了，站点地图内容也全部变了，估计搜索引擎会发现很多死链，不知道啥时候才能刷新完。
-至于文章的超链接，我自己Blog里互相引用的我是过了一遍改掉了，外部的引用我就没办法了。
+至于文章的超链接，我自己Blog里互相引用的我是过了一遍改掉了，外部的引用我就没办法了。而且懒得复原原来的短连接了，新的链接模式都很短。
 
 不过也算是一劳永逸吧，所以文章都变成Markdown，以后都很容易转换和导出导入。不再需要数据库了，我觉得我的VPS又可以降级了。嘿，便宜才是硬道理。
 
