--- a/source/post/2017/1467.md
+++ b/source/post/2017/1467.md
@@ -39,6 +39,12 @@ type: post
 
 然后在原有的主题上有做了更进一步地精简，裁剪加载文件大小和把一些图片换成纯CSS3实现，再就是微调一些样式。
 
+然后顺便更新了下依赖库啥的，我毕竟不是搞前端的，所以懒得搞这种UI布局之类的东西，就直接用[bootstrap][10]了。不过我用的[bootstrap][10]的4.0，4.0必须加载它的js文件，而且还依赖[tether][1]，也导致多加载了几个文件。
+
+不过直接能用[bootstrap][10]的响应式布局还是蛮舒服的。以前的[distinctionpp](https://github.com/owt5008137/distinctionpp)主题的手机上显示还是看着蛮不爽的。而且现在还可以全部用相对大小，不再用px了。而且都不需要我自己去细调。
+
+顺便学了下用[sass][12]来写css，其实和以前[less][13]差不太多。只不过[bootstrap][10]开始转用[sass][12]了而且似乎现在[less][13]并没有[sass][12]活跃。而且导入[sass][12]之后还能使用一些bootstrap定义的函数什么的。还算方便吧。
+
 接下来还有一些额外的功能得添加和替换，毕竟静态博客和动态网站还是有一些限制的。
 
 ## 添加 MathJax/KaTex 支持
@@ -109,3 +115,7 @@ type: post
 [7]: https://github.com/Khan/KaTeX
 [8]: http://golang.org/pkg/html/template/
 [9]: https://www.gitbook.com/
+[10]: https://v4-alpha.getbootstrap.com/
+[11]: http://tether.io/
+[12]: http://sass-lang.com/
+[13]: http://lesscss.org/
