--- a/source/post/2017/1466.md
+++ b/source/post/2017/1466.md
@@ -1,5 +1,5 @@
 ---
-title: libcopp v2的一些优化思路
+title: libcopp v2的第一波优化完成
 tags:
   - coroutine
   - cpp
@@ -14,7 +14,6 @@ categories:
   - Article
   - Work
 date: 2017-07-01 15:57:29
-draft: true
 ---
 
 之前测出来[libcopp][1]还有一些列优化点，但是要破坏之前的API，所以整理了一下优化的想法和方案。
@@ -79,5 +78,176 @@ draft: true
 + 允许预定义分配一段私有数据空间，保存用户数据
 
 
+## 初步成果
+
+目前v2版本的基本改造和流程已经实现完毕，CI上的结果如下:
+
+```
+###################### context coroutine (stack using stack pool) ###################
+########## Cmd: ./sample_benchmark_coroutine_stack_pool 1000 1000 2048
+### Round: 1 ###
+allocate 1000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+create 1000 coroutine, cost time: 0 s, clock time: 5 ms, avg: 5000 ns
+switch 1000 coroutine contest 1000000 times, cost time: 0 s, clock time: 83 ms, avg: 83 ns
+remove 1000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+### Round: 2 ###
+allocate 1000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+create 1000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1000 coroutine contest 1000000 times, cost time: 0 s, clock time: 82 ms, avg: 82 ns
+remove 1000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+### Round: 3 ###
+allocate 1000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+create 1000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1000 coroutine contest 1000000 times, cost time: 0 s, clock time: 83 ms, avg: 83 ns
+remove 1000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+### Round: 4 ###
+allocate 1000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+create 1000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1000 coroutine contest 1000000 times, cost time: 0 s, clock time: 82 ms, avg: 82 ns
+remove 1000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+### Round: 5 ###
+allocate 1000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+create 1000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1000 coroutine contest 1000000 times, cost time: 0 s, clock time: 83 ms, avg: 83 ns
+remove 1000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+
+
+###################### context coroutine (stack using stack pool) ###################
+########## Cmd: ./sample_benchmark_coroutine_stack_pool 1 3000000 16
+### Round: 1 ###
+allocate 1 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+create 1 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1 coroutine contest 3000000 times, cost time: 0 s, clock time: 162 ms, avg: 54 ns
+remove 1 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+### Round: 2 ###
+allocate 1 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+create 1 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1 coroutine contest 3000000 times, cost time: 1 s, clock time: 162 ms, avg: 54 ns
+remove 1 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+### Round: 3 ###
+allocate 1 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+create 1 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1 coroutine contest 3000000 times, cost time: 0 s, clock time: 162 ms, avg: 54 ns
+remove 1 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+### Round: 4 ###
+allocate 1 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+create 1 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1 coroutine contest 3000000 times, cost time: 0 s, clock time: 163 ms, avg: 54 ns
+remove 1 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+### Round: 5 ###
+allocate 1 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+create 1 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1 coroutine contest 3000000 times, cost time: 0 s, clock time: 163 ms, avg: 54 ns
+remove 1 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+
+
+###################### context coroutine (stack using stack pool) ###################
+########## Cmd: ./sample_benchmark_coroutine_stack_pool 30000 100 64
+### Round: 1 ###
+allocate 30000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+create 30000 coroutine, cost time: 0 s, clock time: 145 ms, avg: 4833 ns
+switch 30000 coroutine contest 3000000 times, cost time: 1 s, clock time: 771 ms, avg: 257 ns
+remove 30000 coroutine, cost time: 0 s, clock time: 6 ms, avg: 200 ns
+### Round: 2 ###
+allocate 30000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+create 30000 coroutine, cost time: 0 s, clock time: 10 ms, avg: 333 ns
+switch 30000 coroutine contest 3000000 times, cost time: 1 s, clock time: 812 ms, avg: 270 ns
+remove 30000 coroutine, cost time: 0 s, clock time: 4 ms, avg: 133 ns
+### Round: 3 ###
+allocate 30000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+create 30000 coroutine, cost time: 0 s, clock time: 9 ms, avg: 300 ns
+switch 30000 coroutine contest 3000000 times, cost time: 1 s, clock time: 793 ms, avg: 264 ns
+remove 30000 coroutine, cost time: 0 s, clock time: 4 ms, avg: 133 ns
+### Round: 4 ###
+allocate 30000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+create 30000 coroutine, cost time: 0 s, clock time: 9 ms, avg: 300 ns
+switch 30000 coroutine contest 3000000 times, cost time: 0 s, clock time: 787 ms, avg: 262 ns
+remove 30000 coroutine, cost time: 0 s, clock time: 5 ms, avg: 166 ns
+### Round: 5 ###
+allocate 30000 coroutine, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+create 30000 coroutine, cost time: 0 s, clock time: 9 ms, avg: 300 ns
+switch 30000 coroutine contest 3000000 times, cost time: 1 s, clock time: 804 ms, avg: 268 ns
+remove 30000 coroutine, cost time: 0 s, clock time: 4 ms, avg: 133 ns
+
+
+###################### task (stack using stack pool) ###################
+########## Cmd: ./sample_benchmark_task_stack_pool 1000 1000 2048
+### Round: 1 ###
+create 1000 task, cost time: 0 s, clock time: 5 ms, avg: 5000 ns
+switch 1000 tasks 1000000 times, cost time: 0 s, clock time: 160 ms, avg: 160 ns
+remove 1000 tasks, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+### Round: 2 ###
+create 1000 task, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1000 tasks 1000000 times, cost time: 0 s, clock time: 160 ms, avg: 160 ns
+remove 1000 tasks, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+### Round: 3 ###
+create 1000 task, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1000 tasks 1000000 times, cost time: 0 s, clock time: 160 ms, avg: 160 ns
+remove 1000 tasks, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+### Round: 4 ###
+create 1000 task, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1000 tasks 1000000 times, cost time: 0 s, clock time: 159 ms, avg: 159 ns
+remove 1000 tasks, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+### Round: 5 ###
+create 1000 task, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1000 tasks 1000000 times, cost time: 0 s, clock time: 160 ms, avg: 160 ns
+remove 1000 tasks, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+
+
+###################### task (stack using stack pool) ###################
+########## Cmd: ./sample_benchmark_task_stack_pool 1 3000000 16
+### Round: 1 ###
+create 1 task, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1 tasks 3000000 times, cost time: 1 s, clock time: 351 ms, avg: 117 ns
+remove 1 tasks, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+### Round: 2 ###
+create 1 task, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1 tasks 3000000 times, cost time: 0 s, clock time: 347 ms, avg: 115 ns
+remove 1 tasks, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+### Round: 3 ###
+create 1 task, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1 tasks 3000000 times, cost time: 0 s, clock time: 346 ms, avg: 115 ns
+remove 1 tasks, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+### Round: 4 ###
+create 1 task, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1 tasks 3000000 times, cost time: 1 s, clock time: 346 ms, avg: 115 ns
+remove 1 tasks, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+### Round: 5 ###
+create 1 task, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+switch 1 tasks 3000000 times, cost time: 0 s, clock time: 346 ms, avg: 115 ns
+remove 1 tasks, cost time: 0 s, clock time: 0 ms, avg: 0 ns
+
+
+###################### task (stack using stack pool) ###################
+########## Cmd: ./sample_benchmark_task_stack_pool 30000 100 64
+### Round: 1 ###
+create 30000 task, cost time: 1 s, clock time: 150 ms, avg: 5000 ns
+switch 30000 tasks 3000000 times, cost time: 1 s, clock time: 1407 ms, avg: 469 ns
+remove 30000 tasks, cost time: 0 s, clock time: 13 ms, avg: 433 ns
+### Round: 2 ###
+create 30000 task, cost time: 0 s, clock time: 14 ms, avg: 466 ns
+switch 30000 tasks 3000000 times, cost time: 1 s, clock time: 1404 ms, avg: 468 ns
+remove 30000 tasks, cost time: 0 s, clock time: 13 ms, avg: 433 ns
+### Round: 3 ###
+create 30000 task, cost time: 0 s, clock time: 14 ms, avg: 466 ns
+switch 30000 tasks 3000000 times, cost time: 2 s, clock time: 1420 ms, avg: 473 ns
+remove 30000 tasks, cost time: 0 s, clock time: 14 ms, avg: 466 ns
+### Round: 4 ###
+create 30000 task, cost time: 0 s, clock time: 16 ms, avg: 533 ns
+switch 30000 tasks 3000000 times, cost time: 1 s, clock time: 1419 ms, avg: 473 ns
+remove 30000 tasks, cost time: 0 s, clock time: 13 ms, avg: 433 ns
+### Round: 5 ###
+create 30000 task, cost time: 0 s, clock time: 14 ms, avg: 466 ns
+switch 30000 tasks 3000000 times, cost time: 2 s, clock time: 1389 ms, avg: 463 ns
+remove 30000 tasks, cost time: 0 s, clock time: 13 ms, avg: 433 ns
+```
+
+这是CI里Linux上的结果，osx和windows上的结果就不贴了，都没linux上的数据好，不过相差不大。
+
+这一批优化过后，其实切换性能并没有提高，反而下降了，我查了一下是原先对read的L1 cache命中率也比较高，但是现在下降了。不过我认为这种miss的情况可能更能说明问题，因为现在是几乎0逻辑，一旦有逻辑之后也容易增加cache miss。究其原因，应该是新的组织方式把一个协程（特别是task）的维护数据放在了栈上，那么切换的时候切换地址就会比较遥远。而之前的方式，只要多个协程对象靠得近，而协程对象又足够小（task对象里的数据比较大，但是coroutine里的比较小），因为只有压测代码，所以new的时候malloc一般会把类似大小的对象放一起，这也增加了命中率。但是实际应用的话，必然中间会插入很多其他对象的，所以这个情况也会不贴近实际场景。但是另一方面，v2的优化也使得在使用栈池的情况下，分配开销被大幅降低了，我们的项目里由于开始需要大量的定时器，定时器回调的时候也需要在协程内进行，这也给大量定时器的触发的时候提供了更好的支持和保障。
+
+不过我认为现在的v2任然有可以再优化的地方，本来想在优化完一波再放出这篇总结，但是一方面还没找到什么特别好的不破坏设计的点。另一方面最近看了下SSR-libev的源码，觉得他那种方式的适配的扩展性更好，所以后面可能回去优化服务器框架[asf4g-co][3]的网关层部分，可能要有比较大的改动，改变密钥协商流程，让atgateway支持协商加密方式、更多的加密算法和支持椭圆双曲线协商。所以[libcopp][1]的优化暂时搁置吧，不过以后会主要以v2版本的api为准，基本不会再变更接口了吧。
+
 [1]: https://github.com/owt5008137/libcopp
 [2]: https://github.com/yuanzhubi/call_in_stack
+[3]: https://github.com/atframework/atsf4g-co
