修复两处错别字

--- a/source/post/2017/1411.md
+++ b/source/post/2017/1411.md
@@ -112,7 +112,7 @@ if (!check_flag(node_head->flag, MF_WRITEN)) {
 
 这里的问题就出在时间计算上，那里不应该是乘，而应该是除。在linux里，**CLOCKS_PER_SEC / 1000**的值是1000，那么*cnow*变成了1000倍的*clock()*。然后还有个问题是超时时间不是*channel->block_timeout_count*，而且应该是，*channel->conf.conf_send_timeout_ms*。
 
-所以在这两个BUG的夹击下，只要是连续第二次进入判定超时阶段，十有八九会被判定为超时。之所以发生**概率三亿分之一**，是以为其他情况下在第二次执行蚕食读取数据时，写出端都把数据写完了，那么**MF_WRITEN**就会被标记。所以这里必须是两次连续读期间写出端还没写完才行，所以发生频率才很低。
+所以在这两个BUG的夹击下，只要是连续第二次进入判定超时阶段，十有八九会被判定为超时。之所以发生**概率三亿分之一**，是以为其他情况下在第二次执行尝试读取数据时，写出端都把数据写完了，那么**MF_WRITEN**就会被标记。所以这里必须是两次连续读期间写出端还没写完才行，所以发生频率才很低。
 
 所以修复完以后，代码如下：
 
@@ -376,7 +376,7 @@ Debug:
     last action - end node index: 118301
 ```
 
-这里的性能指标低于文档里说示的结果，是因为这并不是单独对吞吐量和QPS的压力测试，发包的数据量比较大，范围是8B-2KB平均是1KB，所以QPS只有一百万多疑点点，吞吐量也只是1GB/s多一点。但是实际性能并没有下降，因为改完之前这个数据包范围的数据也差不多是这样。当然以后有空还是可以重跑下压力测试。
+这里的性能指标低于文档里说示的结果，是因为这并不是单独对吞吐量和QPS的压力测试，发包的数据量比较大，范围是8B-2KB平均是1KB，所以QPS只有一百万多一点点，吞吐量也只是1GB/s多一点。但是实际性能并没有下降，因为改完之前这个数据包范围的数据也差不多是这样。当然以后有空还是可以重跑下压力测试。
 
 最重要的是，可以看到一整天的满负载执行后，并没有出现一次错误。我们这次的BUG修复就算圆满达成了。
 
