--- a/source/post/2017/1472.md
+++ b/source/post/2017/1472.md
@@ -8,24 +8,24 @@ date: 2017-11-10 13:30:00
 draft: false
 id: 1472
 tags: []
-title: ECDH椭圆双曲线密钥交换，2倍密钥长度，10倍性能
+title: ECDH椭圆双曲线（比DH快10倍的密钥交换）算法简介和封装
 type: post
 ---
 ```
 
-前面有几篇blog就提到我有计划支持使用ECC的DH密钥交换。近期也是抽空把以前的DH密钥交换跨平台适配从[atgateway][2]抽离出来，而后接入了ECDH流程。
+前面有几篇blog就提到我有计划支持使用ECDH密钥交换。近期也是抽空把以前的DH密钥交换跨平台适配从[atgateway][2]抽离出来，而后接入了[ECDH][3]流程。
 
 ## 背景
-对[DH][5]和[ECDH][3]算法的具体原理这里不做具体介绍了，可以点击链接看。[DH][5]和[ECDH][3]的主要的作用就是在通信双方发送一些公有参数，而后通过一系列计算双方都能够得到一个一致的结果。而这个运算的逆运算复杂度过高，在有限时间内不可解（至少量子计算机问世以前不可解），以保证密钥安全性。除了维基百科外，我还看到篇文章图画的很好看的：http://andrea.corbellini.name/2015/05/30/elliptic-curve-cryptography-ecdh-and-ecdsa/
+对[DH][5]和[ECDH][3]算法的具体原理这里不做具体介绍了，可以点击链接看。[DH][5]和[ECDH][3]的主要的作用就是在通信双方发送一些公有参数，保留私有参数，而后通过一系列计算双方都能够得到一个一致的结果。而这个运算的逆运算复杂度过高，在有限时间内不可解（至少量子计算机问世以前不可解），以保证密钥安全性。除了维基百科外，我还看到篇文章图画的很好看的：http://andrea.corbellini.name/2015/05/30/elliptic-curve-cryptography-ecdh-and-ecdsa/ 。而[DH][5]和[ECDH][3]得区别简单来说就是，前者使用了一个大素数和两个随机数，而后者使用了[ECC][7]算法和两个随机点。
 
 实际应用中，有些加密算法的密钥碰撞计算难度反而比破解[DH][5]和[ECDH][3]要容易（比如[atgateway][2]支持的[XXTEA][6]算法，这个算法很简单所以也非常高效）。所以有些工程实践中会每隔一段时间再走一次密钥交换流程来更换密钥。
 
 ## ECDH和DH
 
-其实使用ECC做密钥交换，有时候你可能也会看到[ECDHE][3]这个名词，这个多出来的E的意思是指每次公钥都随机生成。因为像HTTPS里那种是可以从证书文件里取静态公钥的。我接入的其实也是每次都随机生成公钥。
+使用[ECDH][3]做密钥交换得时候你可能也会看到[ECDHE][3]这个词，这个多出来的E的意思是指每次公钥都随机生成。因为像HTTPS里那种是可以从证书文件里取静态公钥的。我封装的接口其实也是每次都随机生成公钥。
 
 ### 适配和接入
-我这里选择了按[RFC 4492][4]进行接入，因为我主要适配的两个库（[openssl][8]和[mbedtls][9]）共同支持的似乎只有[RFC 4492][4]。接入的过程中主要有三个问题。
+我这里选择了按[RFC 4492][4]进行接入，因为我主要适配的两个库（[openssl][8]和[mbedtls][9]）共同支持的似乎只有[RFC 4492][4]。[openssl][8]自不用说了，[mbedtls][9]主要是为了如果需要用到Android或者iOS上的话，用[mbedtls][9]比较容易一些。接入的过程中主要有三个问题。
 
 第一个是[openssl][8]的1.0.1版本支持的算法较少，而高版本比较多一些，而且[openssl][8]本身是可以裁剪算法的。这个用宏来判定就行了，比较easy。
 
@@ -42,7 +42,153 @@ static inline void DH_get0_key(const DH *dh, const BIGNUM **pub_key, const BIGNU
 }
 ```
 
-比较好的消息是[DH][5]和[ECDH][3]的流程基本一致，只是传输内容不同。但是[openssl][8]不像[mbedtls][9]，没有良好的接口封装，里面密钥交换的细节实现得到[openssl][8]的源码里去找。并且流程比较长，而且[openssl][8]的实现不太好，有很多冗余的拷贝操作。实际上我接入的时候是对它的代码流程有些许优化话，主要还是减少不必要的拷贝。[openssl][8]1.0.2的[ECDH][3]和[ECDSA][7]流程代码在ssl/s3_srvr.c和ssl/s3_clnt.c里，而1.1.0版本的相关流程代码在ssl/statem/statem_clnt.c和ssl/statem/statem_srvr.c里。版本适配代码大多在ssl/ssl_locl.h和ssl/t1_lib.c里。唉openssl的文档和代码看得真是蛋疼。
+比较好的消息是[DH][5]和[ECDH][3]的流程基本一致，只是传输内容不同。但是[openssl][8]不像[mbedtls][9]，没有良好的接口封装，里面密钥交换的细节实现得到[openssl][8]的源码里去找。并且流程比较长，而且[openssl][8]的实现不太好，有很多冗余的拷贝操作。实际上我接入的时候是对它的代码流程有些许优化话，主要还是减少不必要的拷贝。[openssl][8]1.0.2的[ECDH][3]和[ECDSA][7]流程代码在ssl/s3_srvr.c和ssl/s3_clnt.c里，而1.1.0版本的相关流程代码在ssl/statem/statem_clnt.c和ssl/statem/statem_srvr.c里。版本适配代码大多在ssl/ssl_locl.h和ssl/t1_lib.c里。
+
+唉openssl的文档和代码找起来真是蛋疼，比如[ECDHE][3]的服务器下发系数的[openssl][8]1.0.2的代码简化一下就是这样（不简化的话太长了）：
+```cpp
+if (((group = EC_KEY_get0_group(ecdh)) == NULL) ||
+    (EC_KEY_get0_public_key(ecdh) == NULL) ||
+    (EC_KEY_get0_private_key(ecdh) == NULL)) {
+    SSLerr(SSL_F_SSL3_SEND_SERVER_KEY_EXCHANGE, ERR_R_ECDH_LIB);
+    goto err;
+}
+
+if ((curve_id =
+        tls1_ec_nid2curve_id(EC_GROUP_get_curve_name(group)))
+    == 0) {
+    SSLerr(SSL_F_SSL3_SEND_SERVER_KEY_EXCHANGE,
+            SSL_R_UNSUPPORTED_ELLIPTIC_CURVE);
+    goto err;
+}
+encodedlen = EC_POINT_point2oct(group,
+    EC_KEY_get0_public_key(ecdh),
+    POINT_CONVERSION_UNCOMPRESSED,
+    NULL, 0, NULL);
+
+encodedPoint = (unsigned char *)
+    OPENSSL_malloc(encodedlen * sizeof(unsigned char));
+bn_ctx = BN_CTX_new();
+if ((encodedPoint == NULL) || (bn_ctx == NULL)) {
+    SSLerr(SSL_F_SSL3_SEND_SERVER_KEY_EXCHANGE,
+            ERR_R_MALLOC_FAILURE);
+    goto err;
+}
+
+encodedlen = EC_POINT_point2oct(group,
+    EC_KEY_get0_public_key(ecdh),
+    POINT_CONVERSION_UNCOMPRESSED,
+    encodedPoint, encodedlen, bn_ctx);
+
+if (encodedlen == 0) {
+    SSLerr(SSL_F_SSL3_SEND_SERVER_KEY_EXCHANGE, ERR_R_ECDH_LIB);
+    goto err;
+}
+
+BN_CTX_free(bn_ctx);
+bn_ctx = NULL;
+
+// ... 然后是dump的代码 ..., p是输出缓冲区的起始指针
+*p = NAMED_CURVE_TYPE;
+p += 1;
+*p = 0;
+p += 1;
+*p = curve_id;
+p += 1;
+*p = encodedlen;
+p += 1;
+memcpy((unsigned char *)p,
+        (unsigned char *)encodedPoint, encodedlen);
+OPENSSL_free(encodedPoint);
+encodedPoint = NULL;
+p += encodedlen;
+```
+
+相比之下[mbedtls][9]的简洁多了，都不用裁剪:
+```cpp
+int mbedtls_ecdh_make_params( mbedtls_ecdh_context *ctx, size_t *olen,
+                      unsigned char *buf, size_t blen,
+                      int (*f_rng)(void *, unsigned char *, size_t),
+                      void *p_rng )
+{
+    int ret;
+    size_t grp_len, pt_len;
+
+    if( ctx == NULL || ctx->grp.pbits == 0 )
+        return( MBEDTLS_ERR_ECP_BAD_INPUT_DATA );
+
+    if( ( ret = mbedtls_ecdh_gen_public( &ctx->grp, &ctx->d, &ctx->Q, f_rng, p_rng ) )
+                != 0 )
+        return( ret );
+
+    if( ( ret = mbedtls_ecp_tls_write_group( &ctx->grp, &grp_len, buf, blen ) )
+                != 0 )
+        return( ret );
+
+    buf += grp_len;
+    blen -= grp_len;
+
+    if( ( ret = mbedtls_ecp_tls_write_point( &ctx->grp, &ctx->Q, ctx->point_format,
+                                     &pt_len, buf, blen ) ) != 0 )
+        return( ret );
+
+    *olen = grp_len + pt_len;
+    return( 0 );
+}
+
+int mbedtls_ecp_tls_write_group( const mbedtls_ecp_group *grp, size_t *olen,
+                         unsigned char *buf, size_t blen )
+{
+    const mbedtls_ecp_curve_info *curve_info;
+
+    if( ( curve_info = mbedtls_ecp_curve_info_from_grp_id( grp->id ) ) == NULL )
+        return( MBEDTLS_ERR_ECP_BAD_INPUT_DATA );
+
+    /*
+     * We are going to write 3 bytes (see below)
+     */
+    *olen = 3;
+    if( blen < *olen )
+        return( MBEDTLS_ERR_ECP_BUFFER_TOO_SMALL );
+
+    /*
+     * First byte is curve_type, always named_curve
+     */
+    *buf++ = MBEDTLS_ECP_TLS_NAMED_CURVE;
+
+    /*
+     * Next two bytes are the namedcurve value
+     */
+    buf[0] = curve_info->tls_id >> 8;
+    buf[1] = curve_info->tls_id & 0xFF;
+
+    return( 0 );
+}
+
+int mbedtls_ecp_tls_write_point( const mbedtls_ecp_group *grp, const mbedtls_ecp_point *pt,
+                         int format, size_t *olen,
+                         unsigned char *buf, size_t blen )
+{
+    int ret;
+
+    /*
+     * buffer length must be at least one, for our length byte
+     */
+    if( blen < 1 )
+        return( MBEDTLS_ERR_ECP_BAD_INPUT_DATA );
+
+    if( ( ret = mbedtls_ecp_point_write_binary( grp, pt, format,
+                    olen, buf + 1, blen - 1) ) != 0 )
+        return( ret );
+
+    /*
+     * write length to the first byte and update total length
+     */
+    buf[0] = (unsigned char) *olen;
+    ++*olen;
+
+    return( 0 );
+}
+```
 
 另外我只接入了密钥交换的流程，像它们其实有更高级的SSL/TLS接口，还包含验证流程、加解密流程、握手的cookie等等。我希望提供的是一个个单独可拆开用的组件，所以这里只接入了密钥交换。像加解密就封装到了[crypto_cipher][10]里。而像[atgateway][2]有自己的验证流程，并不像标准TLS/SSL那样走Hash。
 
@@ -59,28 +205,9 @@ static inline void DH_get0_key(const DH *dh, const BIGNUM **pub_key, const BIGNU
 客户端计算密钥              | 根据P、G、GY、X计算出密钥                                    | 根据group、Q、z计算出密钥
 服务器计算密钥              | 根据P、G、GX、Y计算出密钥                                    | 根据group、Qp、d计算出密钥
 
-## 关于单元测试和valgrind报告
-
-抽离出来以后就比较方便加单元测试了。单元测试的时候发现openssl底层会分配一些全局数据，导致valgrind报still reachable。但是实测了多次不同次数的加解密后的报告的块数和总大小都一样。所以这个就可以忽略了。
-
-然后就是报告的结果，我直接从CI里复制出来了一部分。Windows和Linux里的结果一致：
-
-```
-[ RUN      ] crypto_dh.dh
-[ RUNNING  ] Test DH algorithm 32 times, key len 128 bits. 
-[       OK ] crypto_dh.dh (228.725 ms)
-[ RUN      ] crypto_dh.ecdh
-[ RUNNING  ] Test ECDH algorithm 16 times for 8 curves done. 
-[ RUNNING  ]   Fastest => ecdh:secp224r1 cost 0.60075ms(avg.) key len 224 bits. 
-[ RUNNING  ]   Slowest => ecdh:secp384r1 cost 3.86687ms(avg.) key len 384 bits. 
-[       OK ] crypto_dh.ecdh (221.049 ms)
-```
-
-这就是标题里说的**2倍密钥长度，10倍性能**的来源。可以看到，耗时最短的双曲线，密钥长度是224，平均每次耗时是0.6ms(client+server)。而DH用的是1024bits的DHParameter，密钥长度128，平均耗时是228.725/32=7.14ms 。而最慢的双曲线性能也是两倍多，而平均值是221.049/16/18=1.73ms，性能也是4倍多。
-
 ## API
 
-现在涉及的接口非常简单，和[mbedtls][9]的流程很像。比如下面DH算法的（截取自单元测试）
+封装了接口以后，现在的接口就非常简单了，和[mbedtls][9]的流程很像。比如下面DH算法的（截取自单元测试）
 
 ```cpp
 // 客户端共享配置
@@ -116,25 +243,25 @@ std::vector<unsigned char> switch_public; // 客户端上传的数据
 std::vector<unsigned char> cli_secret; // 保存客户端计算的密钥
 std::vector<unsigned char> svr_secret; // 保存服务器计算的密钥
 
-// step 1 - 服务器: make private key and public key
+// step 1 - 服务器: 计算密钥对，输出DH参数和公钥
 CASE_EXPECT_EQ(0, svr_dh.make_params(switch_params));
 
-// step 2 - 客户端: read dhparam and public key of 服务器
+// step 2 - 客户端: 读取服务器的公钥和DH参数
 CASE_EXPECT_EQ(0, cli_dh.read_params(switch_params.data(), switch_params.size()));
 
-// step 3 - 客户端: make public key
+// step 3 - 客户端: 计算密钥对，输出公钥
 CASE_EXPECT_EQ(0, cli_dh.make_public(switch_public));
 
-// step 4 - 客户端: calculate secret
+// step 4 - 客户端: 计算协商结果
 CASE_EXPECT_EQ(0, cli_dh.calc_secret(cli_secret));
 
-// step 5 - 服务器: read public key of 客户端
+// step 5 - 服务器: 读取客户端的公钥
 CASE_EXPECT_EQ(0, svr_dh.read_public(switch_public.data(), switch_public.size()));
 
-// step 6 - 服务器: calculate secret
+// step 6 - 服务器: 计算协商结果
 CASE_EXPECT_EQ(0, svr_dh.calc_secret(svr_secret));
 
-// DH process done
+// DH流程结束，后面是检查两边结果一致
 CASE_EXPECT_EQ(cli_secret.size(), svr_secret.size());
 if (cli_secret.size() == svr_secret.size()) {
     CASE_EXPECT_EQ(0, memcmp(cli_secret.data(), svr_secret.data(), svr_secret.size()));
@@ -174,25 +301,25 @@ for (size_t curve_idx = 0; curve_idx < all_curves.size(); ++curve_idx) {
     std::vector<unsigned char> cli_secret;  // 保存客户端计算的密钥
     std::vector<unsigned char> svr_secret;  // 保存服务器计算的密钥
 
-    // step 1 - 服务器: make private key and public key
+    // step 1 - 服务器: 计算密钥对，输出双曲线ID和公钥点
     CASE_EXPECT_EQ(0, svr_dh.make_params(switch_params));
 
-    // step 2 - 客户端: read dhparam and public key of server
+    // step 2 - 客户端: 读取服务器的双曲线ID和公钥点
     CASE_EXPECT_EQ(0, cli_dh.read_params(switch_params.data(), switch_params.size()));
 
-    // step 3 - 客户端: make public key
+    // step 3 - 客户端: 计算密钥对，输出公钥点
     CASE_EXPECT_EQ(0, cli_dh.make_public(switch_public));
 
-    // step 4 - 客户端: calculate secret
+    // step 4 - 客户端: 计算协商结果
     CASE_EXPECT_EQ(0, cli_dh.calc_secret(cli_secret));
 
-    // step 5 - 服务器: read public key of client
+    // step 5 - 服务器: 读取客户端的公钥点
     CASE_EXPECT_EQ(0, svr_dh.read_public(switch_public.data(), switch_public.size()));
 
-    // step 6 - 服务器: calculate secret
+    // step 6 - 服务器: 计算协商结果
     CASE_EXPECT_EQ(0, svr_dh.calc_secret(svr_secret));
 
-    // DH process done
+    // ECDH流程结束，后面是检查两边结果一致
     CASE_EXPECT_EQ(cli_secret.size(), svr_secret.size());
     if (cli_secret.size() == svr_secret.size()) {
         CASE_EXPECT_EQ(0, memcmp(cli_secret.data(), svr_secret.data(), svr_secret.size()));
@@ -200,13 +327,36 @@ for (size_t curve_idx = 0; curve_idx < all_curves.size(); ++curve_idx) {
 }
 ```
 
+## 单元测试、性能和valgrind报告
+
+抽离出来以后就比较方便加单元测试了。单元测试的时候发现openssl底层会分配一些全局数据，导致valgrind报still reachable。但是实测了多次不同次数的加解密后的报告的块数和总大小都一样。所以这个就可以忽略了。
+
+然后就是报告的结果，我直接从CI里复制出来了一部分。Windows和Linux里的结果一致：
+
+```
+[ RUN      ] crypto_dh.dh
+[ RUNNING  ] Test DH algorithm 32 times, key len 128 bits. 
+[       OK ] crypto_dh.dh (228.725 ms)
+[ RUN      ] crypto_dh.ecdh
+[ RUNNING  ] Test ECDH algorithm 16 times for 8 curves done. 
+[ RUNNING  ]   Fastest => ecdh:secp224r1 cost 0.60075ms(avg.) key len 224 bits. 
+[ RUNNING  ]   Slowest => ecdh:secp384r1 cost 3.86687ms(avg.) key len 384 bits. 
+[       OK ] crypto_dh.ecdh (221.049 ms)
+```
+
+这就是标题里说的**快10倍**的来源。可以看到，耗时最短的双曲线，密钥长度是224，平均每次耗时是0.6ms(client+server)。而DH用的是1024bits的DHParameter，密钥长度128，平均耗时是228.725/32=7.14ms 。而最慢的双曲线性能也是两倍多，而平均值是221.049/16/18=1.73ms，性能也是4倍多。
+
+封装接口的时候，其实我是选取了[mbedtls][9]目前支持的全部算法。其实openssl本身支持的更多，并且可以裁剪算法。最后适配完之后，看了下单元测试，[openssl][8]1.0.1最多只支持其中8种算法，而1.0.2以上版本是支持全部16种的。交叉测试也pass了（用[openssl][8]版本做服务端，[mbedtls][9]做客户端），但是不太好写构建工程所以交叉测试是手动进行的（用[atgateway][2]编的服务器，然后里面的sample换另一个库编）。
+
+这样以后万一其他模块需要使用，就方便很多了。
+
 [1]: https://github.com/atframework/atframe_utils
 [2]: https://github.com/atframework/atsf4g-co/tree/master/atframework/service/atgateway
 [3]: https://en.wikipedia.org/wiki/Elliptic-curve_Diffie%E2%80%93Hellman
 [4]: https://tools.ietf.org/html/rfc4492
 [5]: https://en.wikipedia.org/wiki/Diffie%E2%80%93Hellman_key_exchange
 [6]: https://en.wikipedia.org/wiki/XXTEA
-[7]: https://en.wikipedia.org/wiki/Elliptic_Curve_Digital_Signature_Algorithm
+[7]: https://en.wikipedia.org/wiki/Elliptic-curve_cryptography
 [8]: https://www.openssl.org/
 [9]: https://tls.mbed.org/
 [10]: https://github.com/atframework/atframe_utils/blob/master/include/algorithm/crypto_cipher.h
