--- a/source/post/2017/1472.md
+++ b/source/post/2017/1472.md
@@ -1,4 +1,3 @@
-```
 ---
 author: owent
 categories:
@@ -11,7 +10,6 @@ tags: []
 title: ECDH椭圆双曲线（比DH快10倍的密钥交换）算法简介和封装
 type: post
 ---
-```
 
 前面有几篇blog就提到我有计划支持使用ECDH密钥交换。近期也是抽空把以前的DH密钥交换跨平台适配从[atgateway][2]抽离出来，而后接入了[ECDH][3]流程。
 
@@ -348,7 +346,13 @@ for (size_t curve_idx = 0; curve_idx < all_curves.size(); ++curve_idx) {
 
 封装接口的时候，其实我是选取了[mbedtls][9]目前支持的全部算法。其实openssl本身支持的更多，并且可以裁剪算法。最后适配完之后，看了下单元测试，[openssl][8]1.0.1最多只支持其中8种算法，而1.0.2以上版本是支持全部16种的。交叉测试也pass了（用[openssl][8]版本做服务端，[mbedtls][9]做客户端），但是不太好写构建工程所以交叉测试是手动进行的（用[atgateway][2]编的服务器，然后里面的sample换另一个库编）。
 
-这样以后万一其他模块需要使用，就方便很多了。
+## 最后
+
+现在所有代码都放在 https://github.com/atframework/atframe_utils/blob/master/include/algorithm/crypto_cipher.h 和 https://github.com/atframework/atframe_utils/blob/master/src/algorithm/crypto_dh.cpp 封装完以后，万一其他什么模块要用，就方便很多了。
+
+其实对于Android，官方推荐的做法是从Java接口封因此鞥过来，而iOS也有自带的加解密库，适配这两个可能是能够最大幅度减小包大小的方法。但是我感觉裁剪良好的情况下，用mbedtls也没大多少。所以暂时还没有去研究这两个平台独立的接入方式。
+
+我也不是专门搞密码学的，所以理解上可能还会有些偏差，欢迎大家拍砖指正交流。
 
 [1]: https://github.com/atframework/atframe_utils
 [2]: https://github.com/atframework/atsf4g-co/tree/master/atframework/service/atgateway
