--- a/source/post/2017/1473.md
+++ b/source/post/2017/1473.md
@@ -40,7 +40,7 @@ type: post
 ### 主动连接(必须是IO流通道:ipv4/ipv6/dns)
 
 ```flow
-st=>start: atbus::node::connect(BUS地址)
+st=>start: atbus::node::connect(BUS地址)或接收到CONN_SYNC通知
 e=>end: 注册流程结束
 connected=>operation: 连接成功
 on_new_connection=>operation: on_new_connection回调
