修订权限问题

--- a/source/post/2018/1801.md
+++ b/source/post/2018/1801.md
@@ -218,7 +218,7 @@ g++ -Wall test_backtrace.cpp -O0 -g -ggdb -rdynamic -o test_backtrace.exe -DUSIN
 clang++ -Wall test_backtrace.cpp -O0 -g -ggdb -rdynamic -o test_backtrace.exe -DUSING_LIBUNWIND -lunwind -lunwind-x86_64
 ```
 命令和输出:
-```
+```bash
 ./test_backtrace.exe
 
 Frame #00: (print_trace()+0x17) [0x400c30]
@@ -251,7 +251,7 @@ g++ -Wall test_backtrace.cpp -O0 -g -ggdb -rdynamic -o test_backtrace.exe
 clang++ -Wall test_backtrace.cpp -O0 -g -ggdb -rdynamic -o test_backtrace.exe
 ```
 命令和输出:
-```
+```bash
 ./test_backtrace.exe
 
 Frame #00: (print_trace()+0x1c) [0x40100c]
@@ -283,7 +283,7 @@ g++ -Wall test_backtrace.cpp -O0 -g -ggdb -o test_backtrace.exe
 clang++ -Wall test_backtrace.cpp -O0 -g -ggdb -o test_backtrace.exe
 ```
 命令和输出:
-```
+```bash
 ./test_backtrace.exe | eval 'while read -r line || [[ -n "$line" ]]; do ADDR=${line/*[}; ADDR=${ADDR%]*}; echo "${line}"; echo "    $(addr2line -Cfpe ./test_backtrace.exe $ADDR)"; done'
 
 Frame #00: () [0x400c8c]
@@ -353,7 +353,7 @@ Windows上的MinGW64里没有execinfo.h的头文件，gcc和clang都没有，所
 cl /nologo /W4 /DEBUG /Zi test_backtrace.cpp
 ```
 命令和输出:
-```
+```bash
 test_backtrace.exe
 
 Frame 00: (print_trace) [0x00007FF6C75768F0]
@@ -384,7 +384,7 @@ Frame 20: (RtlUserThreadStart) [0x00007FFCAC64EF90]
 cl /nologo /W4 /DEBUG /Zi test_backtrace.cpp
 ```
 命令和输出:
-```
+```bash
 test_backtrace.exe
 
 Frame 00: (test_backtrace!print_trace) [0x00007FF6C7576921]
@@ -417,7 +417,7 @@ g++ test_backtrace.cpp -O0 -g -ggdb -o test_backtrace.exe -ldbghelp -ldbgeng -Wa
 clang++ test_backtrace.cpp -O0 -g -ggdb -o test_backtrace.exe -ldbghelp -ldbgeng -Wall -DUSING_GNU_UNWIND=0
 ```
 命令和输出:
-```
+```bash
 ./test_backtrace.exe | eval 'while read -r line || [[ -n "$line" ]]; do ADDR=${line/*[}; ADDR=${ADDR%]*}; echo "${line}"; echo "    $(addr2line -Cfpe ./test_backtrace.exe $ADDR)"; done'
 
 Frame 00: () [0x00000000004015b4]
