--- a/source/post/2018/1801.md
+++ b/source/post/2018/1801.md
@@ -470,8 +470,9 @@ Frame 21: () [0x00007ffcac64efb1]
 
 以上所有测试代码和运行结果都放在 https://gist.github.com/owt5008137/78e1fea9a0221ddf9ed540f4adacf358 。
 
-这个测试之后我会写点检测脚本把它放进util代码的log模块中。但是还是为了最小依赖（并且unwind在不同架构下选用不同功能的时候的后缀不太一样，也不太好写通用的链接检测脚本），默认不会开libunwind的版本，默认windows下使用dbghelp。然后其他提取方法的检测可以写到cmake的检测脚本里，尽可能提供多的数据并且没有太高的额外开销(坚决不启动新进程，不block wait)。初步想法是设置一个开关，高于某个级别得Log（比如Error），就要在打印原本得错误信息之后跟这个调用栈。这样看出错得关系得信息会更容易些吧。
+更完整的实现我已经放到了util代码的log模块中（[log_stacktrace.h][12]和[log_stacktrace.cpp][13]）。因为为了最小依赖，默认不会开libunwind的版本，默认windows下使用dbghelp。提取方法的检测可以写到cmake的检测脚本里，尽可能提供多的数据并且没有太高的额外开销(坚决不启动新进程，不block wait)。然后再log模块里增加了一个选项，可以控制一个范围内的错误级别，在打印原本得错误信息之后追加打印这个调用栈，这样看出错得关系得信息会更容易些。
 
+另外utils的代码在Linux/Windows和macOS上测试过ok了。valgrind也跑过了没有问题。唯一的麻烦是不同平台的libunwind的以来库不太一样。我写了个cmake脚本会尝试去查找一下libunwind-<CPU架构>和libunwind-generic，找不到的情况的话只手动加了。这也是默认不开libunwind的原因之一。
 
 
 [1]: https://gist.github.com/owt5008137/78e1fea9a0221ddf9ed540f4adacf358
@@ -485,3 +486,5 @@ Frame 21: () [0x00007ffcac64efb1]
 [9]: https://gcc.gnu.org/onlinedocs/libstdc++/manual/ext_demangling.html
 [10]: http://www.nongnu.org/libunwind/
 [11]: https://www.gnu.org/software/libc/manual/html_node/Backtraces.html
+[12]: https://github.com/atframework/atframe_utils/blob/master/include/log/log_stacktrace.h
+[13]: https://github.com/atframework/atframe_utils/blob/master/src/log/log_stacktrace.cpp
