--- a/source/post/2018/1802.md
+++ b/source/post/2018/1802.md
@@ -28,6 +28,8 @@ type: post
 
 按现在的功能划分，[etcd][3]的接入总共被分为3个模块，etcd_cluster、etcd_keepalive和etcd_watcher以及一个通用工具etcd_packer。etcd_packer用于对[etcd][3]的一些通用的打解包操作。
 
+![模块关系图](1802-01.png)
+
 ### etcd_cluster 
 
 [etcd][3] v3版本内部的通信已经使用了grpc。本来我是想等他的grpc接口进入官方文档并且提供出的grpc的proto再接入的，可是它一直没有整理出直接grpc的proto文件列表。另外我看了一下它的proto文件里用到了一些[gogoprotobuf][7]的扩展，其他语言不一定可以无缝接入。考虑到etcd使用了[grpc-gateway][6]提供HTTP+JSON的网关层，所以我还是基于他的HTTP接入层来做。因为这里身频次不高，也没有那么在意性能。而且一组[etcd][3]服务的QPS也就在十万的级别，只要管理好连接，不要老新建立和关闭连接，HTTP的性能还是够的。
