--- a/source/post/2018/1804.md
+++ b/source/post/2018/1804.md
@@ -14,29 +14,138 @@ type: post
 
 [TOC]
 
-生命周期，api级别阻止内存错误
-enum和数据绑定
-match和强制非空检查（_模式，if let的理解）,Result<T, E>
+前言
+========================
+虽然我主要使用C++，但是最近也想学点现代化的新语言。初步想的是从[golang][7]和[Rust][1]里先选一个。
+
+这两年[golang][7]在国内很火，最大的特点莫过于语言层面提供了协程支持，能够极大地简化异步逻辑地理解。我之前也接触过一点，还写了个[goroutine压力测试][10]对比我的[libcopp][9]的性能。但是[golang][7]的语法我实在不喜欢，特别是那个不管啥类型声明都是反着来，感觉在复杂的类型下会非常反人类。而且听用过的人说[golang][7]的GC还很不稳定。另外之前有新闻说[golang][7]正在准备2.0，2.0版本即将加入泛型支持，然后导致很多语法不兼容和语法分析得重写。所以我还是懒得踩这个坑了，至少等2.0出来再说。
+
+[Rust][1]是Mozilla搞出来想拿来重写Firefox的。说实话Mozilla和Google还有点差距，导致[Rust][1]的发展还比较慢。对比起来就是感觉[golang][7]很快就提供了一些快速可用的原型给大型项目使用，标准库也足够丰富。而[Rust][1]还纠结在底层、语言层面的优化和最求极致。很多组件都还不成熟，编程设计模型也还没完全统一。
+
+但是接触了一点[Rust][1]以后，我发现[Rust][1]真的是挠到了C++程序员的痒点，语言层面解决了用C++得费很多脑力和用各种奇技淫巧实现并且还不能完全阻止被绕过的质量控制问题，而且保留了C++很多编译期推断得高级特性。并且和C++一样，提供给你能力，但不限定你方法。这是和很多其他语言不同的。比如你可以实现操作符重载，并且不会有可见性问题和冲突问题；今年的版本对宏的增强可以让你很容易实现很多语言支持的await功能，现在已经有不少Rust协程库了。感觉[Rust][1]就是搞出来挖C++墙角的。
+
+
+诡异的命名和符号
+========================
+
+[Rust][1]也有一些让初学者不太爽的地方。就是它为了解决一些工程上的问题提出了一系列概念，然后里面用的符号特别的奇葩。就算是已有的概念，它也非得搞个特立独行的命名。感觉完全就是增加学习成本。
+
+比如后面会提到的生命周期，它非得用 ``` '标识符 ``` 这种奇怪符号。别人都是用在字符（串）里的。还有宏，非得用感叹号结尾。
+
+还有lambda表达式，我见过 ``` (参数列表) => {代码块} ``` 的，甚至不带括号的 ``` 参数列表 => 代码块 ``` 或者不带箭头的 ``` (参数列表) {代码块} ``` 的。[Rust][1]偏偏使用竖线来声明参数 ``` |参数列表| 代码块 ``` 。
+
+还有其他语言的多分支处理几乎都是 ```switch``` ，[Rust][1]的叫 ```match``` 。人家语言一般成功都叫success，[Rust][1]的叫Ok。其他语言的interface，[Rust][1]的叫trait。不过这个C++也叫trait而且它和C++的类似都有编译期推断所以还勉强说的过去。但是别人叫package [Rust][1]叫crate是什么鬼？
+
+本来我觉得[golang][7]的函数声明的关键字是 ```func``` 已经很偷懒了。结果[Rust][1]这货更短，是 ```fn``` 。之前看到一个文章是说啥来着现在完全没必要使用缩写的。因为现代的编辑器/IDE已经足够“聪明”了，并且也不缺那点磁盘空间。这种大量的缩写和奇怪的命名我感觉的增大了非常多学习成本。也不知道设计者怎么想的。
+
+
+设计核心
+========================
+
+[Rust][1]的设计核心感觉上就是在不牺牲效率的前提下，最大化地利用编译期分析，来帮助我们杜绝可能地错误。这点我是觉得用起来非常爽地地方。
+
+
+默认不可变和可变借用唯一
+-----------------------
+
+比如说[Rust][1]地数据类型默认是不可变的（当然很多函数式语言也这样）。像C/C++默认是可变的导致工程设计上很容易就忽略了提供一个const的函数。然后后来很难对一些场景做优化和假设。而默认不可变，可以使得编译期对很多变量、存储做优化。另外还有一个重要的设计是可变借用（```mut```）只能有一个。这样就可以准确地分析对象地生命周期然后控制对象什么时候析构。并且在多线程编程地时候，可以放心地认为这个对象不会在奇怪地地方被修改，也就不容易出现线程安全问题。
+
+神一样的枚举类型
+-----------------------
+
+[Rust][1]的枚举类型也很有意思。它允许你给枚举类型的每一项绑定一个不同的值。这就延伸出了[Rust][1]对那种可成功可失败的API的推荐返回值是 ```Result<T, E>``` 。这是一个枚举值，其中有Ok(T)表示成功和成功的返回值，还有Err(E)表示失败和失败的返回值。当然如果有需要返回多种失败则可以换个有更多条目的枚举值。不同枚举值可以带出不同类型的信息。这也导致了我第一眼看这段代码的时候一直没理解这是什么奇怪的流程。
+
+```rust
+// Send the message
+match sender.send_message(&message) {
+	Ok(()) => (),
+	Err(e) => {
+		println!("Send failed: {:?}", e);
+		break;
+	}
+}
+```
+
+这里面其实是对```sender.send_message(&message)```的返回值做枚举判定，然后Ok的case绑定了一个空值，Err的case绑定了一个e，包含了错误信息。我认为这种方式比Exception机制要好得多得多得多。像C/C++之类得语言，会推荐返回错误码。但是这种错误码一般只有一个整数，能够提供得信息很少，而且如果被漏判了很难发现。而另一部分语言多使用异常机制，那么有个问题是你在使用的时候很容易忽略了他可能会抛个异常然后忘记了fallback。而这种机制兼顾解决了这两个问题。特别是不同的case绑定的数据类型可以不一样，这样为以后扩展和防止遗漏提供了最大的便利。比如我之前写的websoccket的小工具。
+
+```rust
+match message {
+	OwnedMessage::Close(_) => {
+		// Got a close message, so send a close message and return
+		let _ = tx_1.send(OwnedMessage::Close(None));
+		return;
+	}
+	OwnedMessage::Ping(data) => {
+		match tx_1.send(OwnedMessage::Pong(data)) {
+			// Send a pong in response
+			Ok(()) => (),
+			Err(e) => {
+				println!("Send Pong failed: {:?}", e);
+				return;
+			}
+		}
+	}
+	// print what we received
+	OwnedMessage::Text(data) => {
+		println!("Response: {:?}", json::stringify(data));
+		let _ = tx_1.send(OwnedMessage::Close(None));
+	}
+	// print what we received
+	_ => {
+		let _ = tx_1.send(OwnedMessage::Close(None));
+	}
+}
+```
+
+上面就是根据不同类型的消息执行不同的流程。我们看到有很多的 ```_``` 是因为[Rust][1]要求你处理所有的返回值。如果你要忽略，可以，显式告诉编译器。而 ```_``` 就是告诉编译器我要忽略返回值或者case类型。这个要求对稳定性有很大的帮助，而我们以前的C++项目都是人工用编码规范的形式执行的。但是万一漏了或者有人偷懒，你完全发现不了，等爆发的时候已经GG了。
+
+还有一个语法，是[Rust][1]用来简化 ```match``` 的，但是我第一眼也没看懂。它主要是只处理成功或者只处理失败，忽略其他case的简写。拿上面发送消息举例就是：
+
+```rust
+if let Err(e) = sender.send_message(&message) {
+	println!("Send failed: {:?}", e);
+}
+```
+
+
+生命周期，api级别阻止内存错误，编译期。
+
 代码块和最后的值
 自动转移（move）语意和api强制关注坑（str拷贝，未处理的match）
-诡异的命名和符号：
-	生命周期
-	lambda
-	Ok/success
-	func/fn
-	interface/module/trait
+
 	泛型 <T: Display + Clone> 或<T> where T: Display + Clone
 		操作符重载 PartialOrd
 		Mut => Copy
 		println!格式化字符串 => ToString(标准库的Display::to_string函数)
-包管理（docs.rs)、工具链管理(rustup.rs)、native库依赖和交叉编译
+
 工程化
-	构建系统（[cargo][6]）
+========================
+
 单元测试
+------------------------
+
+工具链管理([rustup.rs][8])
+------------------------
+
+### Native库依赖和交叉编译
+
+构建系统和包管理
+------------------------
+
+### 构建系统 ([cargo][6])
+
+### 包管理 ([crates.io][5])
+
+### 文档管理 ([docs.rs][4])
+
 
 [1]: https://rust-lang.org/
 [2]: https://kaisery.github.io/trpl-zh-cn/
 [3]: https://doc.rust-lang.org/book/second-edition/
 [4]: https://docs.rs/
 [5]: https://crates.io/
-[6]: http://doc.crates.io/guide.html
+[6]: https://doc.crates.io/guide.html
+[7]: https://golang.org/
+[8]: https://rustup.rs/
+[9]: https://github.com/owt5008137/libcopp
+[10]: https://gist.github.com/owt5008137/2286768f2586521600c9fd1700cbf845
