--- a/source/post/2018/1804.md
+++ b/source/post/2018/1804.md
@@ -36,7 +36,7 @@ type: post
 
 还有其他语言的多分支处理几乎都是 ```switch``` ，[Rust][1]的叫 ```match``` 。人家语言一般成功都叫success，[Rust][1]的叫Ok。其他语言的interface，[Rust][1]的叫trait。不过这个C++也叫trait而且它和C++的类似都有编译期推断所以还勉强说的过去。但是别人叫package [Rust][1]叫crate是什么鬼？
 
-本来我觉得[golang][7]的函数声明的关键字是 ```func``` 已经很偷懒了。结果[Rust][1]这货更短，是 ```fn``` 。之前看到一个文章是说啥来着现在完全没必要使用缩写的。因为现代的编辑器/IDE已经足够“聪明”了，并且也不缺那点磁盘空间。这种大量的缩写和奇怪的命名我感觉的增大了非常多学习成本。也不知道设计者怎么想的。
+本来我觉得[golang][7]的函数声明的关键字是 ```func``` 已经很偷懒了。结果[Rust][1]这货更短，是 ```fn``` 。之前看到一个文章是说啥来着现在完全没必要使用缩写的。因为现代的编辑器/IDE已经足够“聪明”了，并且也不缺那点磁盘空间。然后别的语言里的 ```abort``` 、 ```assert``` 之类， [Rust][1 用的 ```panic!``` 这种大量的缩写和奇怪的命名我感觉的增大了非常多学习成本。也不知道设计者怎么想的。
 
 
 设计核心
@@ -107,7 +107,12 @@ if let Err(e) = sender.send_message(&message) {
 }
 ```
 
+返回值和语句块的最后一个值
+-----------------------
 
+
+生命周期和转移语义
+-----------------------
 生命周期，api级别阻止内存错误，编译期。
 
 代码块和最后的值
@@ -117,6 +122,15 @@ if let Err(e) = sender.send_message(&message) {
 		操作符重载 PartialOrd
 		Mut => Copy
 		println!格式化字符串 => ToString(标准库的Display::to_string函数)
+
+宏
+-----------------------
+
+[Rust][1]有着极其难看懂但是究极变态得宏。
+
+
+链接器
+-----------------------
 
 工程化
 ========================
