--- a/source/post/2018/1804.md
+++ b/source/post/2018/1804.md
@@ -22,8 +22,17 @@ type: post
 
 [Rust][1]是Mozilla搞出来想拿来重写Firefox的。说实话Mozilla和Google还有点差距，导致[Rust][1]的发展还比较慢。对比起来就是感觉[golang][7]很快就提供了一些快速可用的原型给大型项目使用，标准库也足够丰富。而[Rust][1]还纠结在底层、语言层面的优化和最求极致。很多组件都还不成熟，编程设计模型也还没完全统一。
 
-但是接触了一点[Rust][1]以后，我发现[Rust][1]真的是挠到了C++程序员的痒点，语言层面解决了用C++得费很多脑力和用各种奇技淫巧实现并且还不能完全阻止被绕过的质量控制问题，而且保留了C++很多编译期推断得高级特性。并且和C++一样，提供给你能力，但不限定你方法。这是和很多其他语言不同的。比如你可以实现操作符重载，并且不会有可见性问题和冲突问题；今年的版本对宏的增强可以让你很容易实现很多语言支持的await功能，现在已经有不少Rust协程库了。感觉[Rust][1]就是搞出来挖C++墙角的。
+但是接触了一点[Rust][1]以后，我发现[Rust][1]真的是挠到了C++程序员的痒点，语言层面解决了用C++得费很多脑力和用各种奇技淫巧实现并且还不能完全阻止被绕过的质量控制问题，而且保留了C++很多编译期推断得高级特性。并且和C++一样，提供给你能力，但不限定你方法提供 **零成本抽象（zero-cost abstractions）** 或者说叫 **零开销（zero-overhead）**。
 
+> In general, C++ implementations obey the zero-overhead principle: What you don’t use, you don’t pay for. And further: What you do use, you couldn’t hand code any better.
+> 
+>     Bjarne Stroustrup "Foundations of C++"
+> 
+> 从整体来说，C++ 的实现遵循了零开销原则：你不需要的，无需为他们买单。更有甚者的是：你需要的时候，也不可能找到其他更好的代码了。
+> 
+>     本贾尼·斯特劳斯特卢普 "Foundations of C++"
+
+这是和很多其他语言不同的。比如你可以实现操作符重载，并且不会有可见性问题和冲突问题；今年的版本对宏的增强可以让你很容易实现很多语言支持的await功能，现在已经有不少Rust协程库了。感觉[Rust][1]就是搞出来挖C++墙角的。
 
 诡异的命名和符号
 ========================
@@ -110,12 +119,52 @@ if let Err(e) = sender.send_message(&message) {
 返回值和语句块的最后一个值
 -----------------------
 
+和很多其他函数式语言一样，[Rust][1]使用最后一个值作为语句块的“返回值”。如果语句块是一个函数，那么就是函数返回值。比如：
+
+```rust
+fn print_usage() {
+    123
+}
+```
+
+这时候123是返回值，这和传统的语言不太一样。之所以说是语句块的“返回值”，是因为他还可以这么用：
+
+```rust
+let a = if abc {
+	123
+} else {
+	456
+}
+```
+
+甚至再嵌套一层：
+
+```rust
+let a = if abc {
+	match def {
+        Ok(m) => m,
+        Err(f) => panic!(f.to_string()),
+    };
+} else {
+	456
+}
+```
+
+这就有意思多啦。
 
 生命周期和转移语义
 -----------------------
+
+在看[Rust][1]文档的过程中，看得出来[Rust][1]的设计哲学是尽可能地无运行时开销并在编译期发现更多地错误。并且要求你关注失败和避免意料之外地开销。
+
+所谓意料之外的开销是指比如C++有很多隐式类型转换和复制构造。而且由于历史和优先保证正确性的原因，默认就是复制。像 ```std::string``` 传递的时候可能会产生的复制，以及一不小型模板推断出了个std::vector<T, ALLOC>类型作为函数参数，那会导致整个复制。
+
+另外在C++里，我们经常会用一些技巧去限制工程实现，以达到提高工程质量的效果，而且写技巧往往晦涩难懂。而[Rust][1]没有这些历史包袱，就设计了一个比较良好的编译期检查。
+
+
 生命周期，api级别阻止内存错误，编译期。
 
-代码块和最后的值
+
 自动转移（move）语意和api强制关注坑（str拷贝，未处理的match）
 
 	泛型 <T: Display + Clone> 或<T> where T: Display + Clone
